/* སྡེ་སྲིད་མཆོག་གི་མཛད་པ་མཐའ་མ་དང་ དགོངས་ཞུ་བའི་ཤུལ་གྱི་མཛད་རྣམ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -437,6 +437,41 @@
 ==== སྡེ་སྲིད་མཆོག་གི་མཛད་པ་མཐའ་མ་དང་ དགོངས་ཞུ་བའི་ཤུལ་གྱི་མཛད་རྣམ། ====
 <big>སྤྱི་ལོ་ ༡༨༡༠ ཟླཝ་ ༤ པའི་ནང་ སྡེ་སྲིད་ཞབས་དྲུང་ཐུགས་སྤྲུལ་འཇིགས་མེད་གྲགས་པ་མཆོག་ དགུང་ལོ་ཉེར་གཉིས་བཞེསཔ་ད་ རང་གི་མོས་པའི་ཐོག་ལས་ སྡེ་སྲིད་ཀྱི་ཁྲི་ལས་དགོངས་ཞུ་མཛད་ནུག། དགོངས་ཞུ་མཛད་པའི་ཤུལ་ལུ་ སེམས་རྟོགས་ཁ་ལུ་བཞུགས་ཏེ་ ཡོངས་འཛིན་འཇམ་དབྱངས་རྒྱལ་མཚན་གྱི་རྣམ་ཐར་ གསར་རྩམ་མཛད་ནུག། སྤུངས་རྫོང་པ་དཔལ་འབར་གྱིས་ ལཱ་ངན་མང་རབས་ཅིག་འབདཝ་ལས་ ཞབས་དྲུང་མཆོག་གིས་ སྤུངས་རྫོང་པའི་གོ་གནས་ལས་དགོངསམ་ཞུ་བཅུག་ནུག། རྗེ་འཇམ་དཔལ་གྲགས་པ་མཆོག་ མཁན་ཁྲི་ཉེར་གཅིག་པ་ལས་དགོངས་ཞུ་མཛད་དེ་ མཁན་ཁྲི་ཉེར་གཉིས་པ་འཇིགས་མེད་རྒྱལ་མཚན་འདི་ ཁྲི་མངའ་གསོལ་མ་ཞུ་ཚུན་ཚོད་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་གིས་ མཁན་ཆེན་གྱི་ཕྱག་འགན་བཞེས་ཏེ་བཞུགས་ནུག། རྟ་ལོག་གཙུག་ལག་ཁང་ ཞབས་དྲུང་གི་མཐོང་གྲོལ་མཇལ་ཁ་གནང་ནིའི་དོན་ལུ་བཞེངས་ཡོདཔ་དང་ གྲུབ་ཆུ་ཡང་བཏོན་ནུག་ དེ་ལས་ མཐོང་གྲོལ་ཁྱད་དུ་འཕགས་པ་མང་རབས་ཅིག་བཞེངས་གནང་ནུག། དེ་ལས་ སྤྱི་ལོ་ ༡༨༣༠ ཟླཝ་ ༨ པའི་ཚེས་ ༣༠ ལུ་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་འཇིགས་མེད་གྲགས་པ་མཆོག་ དགོང་ལོ་ ༤༠ བཞེསཔ་ད་ དགོངས་པ་ཆོས་ཀྱི་དབྱིངས་ལུ་ཐིམ་སོ་ནུག་གོ།</big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་སུམ་ཅུ་པ་ས་སྐྱོང་མི་དབང་ཚ་ཕུག་རྡོ་རྗེའི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། ====
+<big>སྡེ་སྲིད་ཁྲི་རབས་སུམ་ཅུ་པ་ ས་སྐྱོང་མི་དབང་ཀྲོང་གསར་དཔོན་སློབ་ཚ་ཕུག་རྡོ་རྗེ་མཆོག་ སྟོད་ཝང་ཚ་ཕུག་ནང་ལུ་སྐུ་འཁྲུངས་ཏེ་ མཚན་ཡང་ཚ་ཕུག་རྡོ་རྗེ་ཟེར་གསོལ་ནུག། སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ སྒར་ལྟོ་སྦེ་ཕྱག་ཞུ་སྟེ་ སྲིད་སྐྱོང་གི་ལམ་ལུགས་དང་སྒྲིག་ལམ་རྣམ་གཞག་ཚུ་ལུ་ཉམས་མྱོང་ཐོབ་ཡོདཔ་ལས་ རིམ་གྱིས་སྦེ་ ཆོས་རྩེ་དཔོན་སློབ་ཀྱི་གོ་གནས་བཞེས་ནུག། སྡེ་སྲིད་ཁྲི་རབས་ཉེར་བཞི་པ་ སངས་རྒྱས་བསྟན་འཛིན་དང་ སྡེ་སྲིད་ཁྲི་རབས་ཉེར་ལྔ་པ་དབུ་མཛད་སྤ་གྲོ་པ། སྡེ་སྲིད་ཁྲི་རབས་ཉེར་དྲུག་པ་ པདྨ་ཆོས་གྲགས་ཚུ་གིས་ སྲིད་སྐྱོང་མཛད་གནང་བའི་སྐབས་ལས་འགོ་བཟུང་སྟེ་ ཁྲི་རིན་པོ་ཆེ་ཚུལ་ཁྲིམས་གྲགས་པ་མཆོག་ ཆོས་སྲིད་ཟུང་འབྲེལ་གྱི་ཁྲི་ཐོག་ལུ་མ་བཀལ་ཚུན་ཚད་ ཆོས་རྩེ་དཔོན་སློབ་ཚ་ཕུག་རྡོ་རྗེ་གིས་ ངོ་ལོག་རྐྱབ་སྟེ་ནང་འཁྲུག་ལང་བཅུག་ནུག། <br>
+སྤྱི་ལོ་ ༡༨༠༩ ལས་ ༡༨༡༠ ཚུན་ ཆོས་རྩེ་དཔོན་སློབ་ཚ་ཕུག་རྡོ་རྗེ་མཆོག་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པའི་ཕྱོགས་གཏོགས་ལུ་ ཐིམ་ཕུག་དང་དར་དཀར་ན། སྤ་རོ་དཔོན་སློབ་ཚུ་གི་འཆར་གཞི་དང་འཁྲིལ་ཏེ་ ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་གི་ཧོངས་ལས་ བྱང་ཕྱད་རྐྱབ་མི་ཚུ་གི་གྲས་ལས་གཅིག་ ཁོ་ཨིན་མས།<br>
+སྡེ་སྲིད་ཁྲི་རབས་ཉེར་བརྒྱད་པ་ ཞབས་དྲུང་གསུང་སྤྲུལ་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་མཆོག་ སྤྱི་ལོ་ ༡༨༡༡ ཟླཝ་ ༤ པའི་ནང་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛདཔ་ད་ སྤྱི་ལོ་ ༡༨༡༡ ཟླཝ་ ༥ པའི་ནང་ ཆོས་རྩེ་དཔོན་སློབ་ཚ་ཕུག་རྡོ་རྗེ་མཆོག་ ལྕོགས་གྲུབ་ཅན་ཅིག་འབདཝ་ལས་ ཁོ་རའི་དབང་ཚད་ཀྱི་སྒོ་ལས་ སྡེ་སྲིད་ཁྲི་རབས་སུམ་ཅུ་པའི་ཁྲི་ཁར་བྱོན་ནུག། དེའི་སྐབས་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་གསུམ་པ་འཇིགས་མེད་གྲགས་པ་མཆོག་གིས་ ཆོས་རྩེ་དཔོན་སློབ་ཚ་ཕུག་རྡོ་རྗེ་ལུ་ ལེགས་དར་དང་བཅས་ ཆིབས་རྟ་གནང་ནུག། སྡེ་སྲིད་མཆོག་གིས་ ཞབས་བརྟན་ཟབ་རྒྱས་ཕུལ་ནུག།</big>
+==== སྡེ་སྲིད་མཆོག་གི་མཛད་རྣམ་དང་མཛད་པ་མཐའ་མ། ====
+<big>སྡེ་སྲིད་ཚ་ཕུག་རྡོ་རྗེ་མཆོག་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་མངའ་གསོལ་ཏེ་ སྲིད་སྐྱོང་མཛད་དེ་ཟླཝ་དྲུག་ཡང་མ་ལངསམ་ལས་ ཐིམ་ཕུག་རྫོང་དཔོན་བསོད་ནམས་འབྲུག་རྒྱས་ཀྱིས་ ངོ་ལོག་རྐྱབ་སྟེ་ སྡེ་སྲིད་མཆོག་བཀྲོངས་ད་ནུག།</big>
+
+
+=== སྡེ་སྲིད་ཁྲི་རབས་སོ་གཅིག་པ་ ཐིམ་རྫོང་པ་བསོད་ནམས་འབྲུག་རྒྱས་ཀྱི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་མ་མཛད་པའི་ཧེ་མ། ====
+===== དང་པ་སྐུ་འཁྲུངས་པ་དང་ཆོས་རྗེས་འབྲུག་པའི་སྒར་ལྟོའི་གྲལ་དུ་ཞུགས་པ། =====
+སྡེ་སྲིད་ཁྲི་རབས་སོ་གཅིག་པའི་མཚན་ཡང་ བསོད་ནམས་འབྲུག་རྒྱས་ཟེར་ གསོལ་དགོ་པའི་དགོས་པ་ཡང་ ཝང་ཚོ་ཆེན་བརྒྱད་ཀྱི་ཡ་གྱལ་སྟོད་ཝང་སྲིན་མོ་ལུ་འཁྲུངས་ནི་འདི་གིས་ཨིན་པས། ཁོ་ར་འདི་ གཞོན་སྐྱེས་ལངམ་ད་ ཁོ་ར་དང་ཁོ་རའི་གཡུས་ཁར་ལས་འབད་མི་ཆ་རོགས་ སྟོད་ཝང་དར་ལུང་པ་མ་ཧཱ་བྷ་ལ་བུམ་ཐང་བྱ་དཀར་རྫོང་དཔོན་འབད་དེ་བཞུགས་ས་ལུ་ གནས་སྐོར་བྱོན་པའི་སྐབས་ དགེ་སློང་གི་གཡོག་རྒྱུག་མི་སྦེ་ སྒྲིག་རྒྱུག་སྟེ་བཞུགས་ནུག།
+དེ་བསྒང་ ཧེ་མ་སྤྲུལ་སྐུ་མཆོག་ལྡན་མགོན་པོའི་དགོན་གནས་ བུམ་ཐང་བླ་མའི་དགོན་པའི་གདན་ས་ལུ་ བྱ་དཀར་རྫོང་གི་ཉེ་འདབས་ལྷ་ལུང་དཔལ་རྡོར་གྱི་གདུང་བརྒྱུད་ བྱ་དཀར་གདུང་གི་ཁྱིམ་ནང་ལས་ ནོར་བུ་སྒྲོན་མ་དང་གཉེན་དུ་བསྡོམས་ཏེ་ བཞུགས་པའི་ཐ་མ་ ཁོང་གཉིས་ལུ་ སྲས་ལྔ་དང་སྲོས་མོ་གཉིས་བྱུང་ནུག། གཏམ་ཞིང་ཆོས་རྗེ་ཨོ་རྒྱན་ཕུན་ཚོགས་ཀྱི་ བྱུང་བའི་སྤུན་ཆ་རྒན་ཤོས་སྲས་མོ་རིན་ཆེན་པདྨོ་དེ་དང་ གཉེན་གཅིག་ཁར་བསྡོམས་པའི་བཟའ་ཚང་ལུ་གྱུར་པའི་ སྲས་མོ་པདྨ་ཆོས་སྐྱིད་འདི་ཤུལ་མ་ གོང་ས་འཇིགས་མེད་རྣམ་རྒྱལ་བཙུན་མོ་བཞེས་སྟེ་སྡོད་ཡོདཔ་ཨིན་པས།
+===== གཉིས་པ་གོ་གནས་རིམ་པ་མ་འདྲཝ་བཞེས་པའི་སྐོར། =====
+འབྲུག་སྡེ་སྲིད་སོ་དགུ་པ་བསོད་ནམས་འབྲུག་རྒྱས་མཆོག་ནི་ འབྲུག་སྡེ་སྲིད་མ་མཛད་པའི་ཧེ་མ་ སྟོད་ཝང་དར་ལུང་པ་མ་ཧཱ་བྷ་ལ་བུམ་ཐང་བྱ་དཀར་རྫོང་དཔོན་འོག་ ཕྱག་ཞུས་ཏེ་ལོ་དག་པ་ཅིག་ལས་ར་ ཆིབས་ཞོན་པའི་གོ་གནས་ བུམ་ཐང་བྱ་དཀར་རྫོང་གི་སྒོ་སྲུང་པའི་གོ་གནས་བཞེས་ཏེ་བཞུགསཔ་ད་ ཁོ་རའི་ལྕོགས་གྲུབ་ཆེན་པོ་ལས་བརྟེན་གཉིས་སྐལ་མའི་གོ་གནས་ ཀྲོང་གསར་གཟིམ་དཔོན་ཐོབ་པའི་ཁར་ ད་རུང་ ཡུན་མ་རིངམ་ཅིག་ཁར་ ཀྲོང་གསར་ལུ་ཁོ་གིས་ ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་གོ་གནས་དང་ དེའི་ཤུལ་ལས་ ཐིམ་ཕུག་ལུ་ཡང་ ཐིམ་ཕུག་རྫོང་དཔོན་གྱི་གོ་གནས་ཚུ་ རིམ་པ་བཞིན་དུ་བཞེས་ཏེ་ བཞུགས་སྡོད་སྡོདཔ་ཨིན་པས། 
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ཡོད་པའི་སྐོར། ==== 
+ཐིམ་རྫོང་པ་བསོད་ནམས་འབྲུག་རྒྱས་ཀྱི་ སྡེ་སྲིད་སུམ་ཅུ་པ་ཚ་ཕུགས་རྡོ་རྗེ་མཆོག་ནི་ ཁྲི་ཐོག་གུར་ ཟླ་ངོ་ ༥ དེ་ཅིག་འགྱོཝ་ད་བཀྲོང་མི་དེ་ཡང་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་བཅུ་གཅིག་(༡༨༡༡) ལྕགས་ལུག་ཟླ་ལྔ་པའི་ནང་ ཀྲོང་གསར་དཔོན་སློབ་ཚ་ཕུགས་རྡོ་རྗེ་ནི་ སྡེ་སྲིད་སུམ་ཅུ་པའི་ཁྲི་ལུ་བཞུགསཔ་ད་ ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་ཁྲི་འདི་ ཧེ་མ་བསོད་ནམས་འབྲུག་རྒྱས་ཀྱིས་མཛད་ཡོདཔ་ཨིན་རུང་ སྡེ་སྲིད་ཁྲི་ཐོག་ནི་ སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་ཀྱི་ཧེ་མ་ ཚ་ཕུགས་རྡོ་རྗེ་གིས་མཛད་མི་ལུ་ངལ་མ་རངས་པར་ ཐིམ་རྫོང་པ་བསོད་ནམས་འབྲུག་རྒྱས་ཀྱིས་ སྡེ་སྲིད་སུམ་ཅུ་པ་ཚ་ཕུགས་རྡོ་རྗེ་ནི་ སྡེ་པའི་ཁྲི་ཐོག་ཁར་ར་བཀྲོངས་བཏང་ནུག། དེ་ལས་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་བཅུ་གཉིས་(༡༨༡༢) པའི་ཆུ་སྤྲེལ་ལོའི་ནང་ རྫོང་ཁག་ཡོངས་ཀྱི་རྫོང་དཔོན་ག་ར་འཛོམས་བཞིན་ ཐིམ་ཕུག་རྫོང་དཔོན་བསོད་ནམས་འབྲུག་རྒྱས་ནི་ གསོལ་ཐབས་སྤུ་ན་ཁར་ཕེབས་ཞིནམ་ལས་ སྡེ་སྲིད་ཁྲི་རབས་སོ་གཅིག་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ནུག།
+སྡེ་སྲིད་ཁྲི་ཐོག་གི་ཕྱག་ཤུལ།
+===== དང་པ་ཕས་རྒོལ་ཟིལ་གྱིས་གནོན་ཏེ་ཞི་བདེའི་གོ་སྐབས་བཟོ་གནང་བ། =====
+སྡེ་སྲིད་གཤགས་མི་ཚ་ཕུགས་རྡོ་རྗེའི་ཕྱག་ཞུ་མི་དང་ ཞབས་དྲུང་གསུང་སྤྲུལ་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་གྱི་ཕྱག་ཞུ་མི་ཚུ་ ཁ་རུབ་སྟེ་ རྒྱབ་འགལ་གྱི་གྲོས་འཆར་བརྩམས་པ་མ་ཚད་ ཞབས་དྲུང་འཇིགས་གྲགས་ལུ་ཡང་ དེ་ལུགས་ཀྱི་སྙན་ཞུ་ཕུལ་ནུག། སྡེ་སྲིད་ཀྱི་དབང་ལུ་ ཞབས་དྲུང་ཕྱག་གཡོག་ཚོ་ཆེན་གྱི་དགེ་འདུན་པ་ཚུ་ རང་སོའི་གཡུས་ཁར་ཆུ་བྲག་འགོ་པ་ཚུ་ཡང་ལོག་སོང་པའི་ཤུལ་ལུ་ གཞན་ཚུ་ག་ར་སྡེ་སྲིད་ཀྱི་བསོད་དབང་ཤུགས་ཀྱིས་འོག་ལུ་བསྡུ་བཏངམ་ལས་ ཕས་ཀྱི་རྒོལ་བ་གིས་གླགས་རྙེད་མ་ཚུགས་པར་ འདས་པའི་ལོ་ཚུ་ནང་ རྒྱལ་ཁབ་ཀྱི་དགའ་སྐྱིད་འཕྲོག་མི་ཟིང་རྐྱེན་ཚུ་ཟིལ་གྱིས་གནོན་ཏེ་ ཚར་ཅིག་རྒྱལ་ཁབ་ཞི་བདེའི་གོ་སྐབས་ཤར་ནུག།
+===== གཉིས་པ་ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་ལུ་བཟོད་གསོལ་ཕུལ་བ། =====
+འབྲུག་སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་མཆོག་ནི་ སྔོན་མ་ཞབས་དྲུང་རིན་པོ་ཆེ་ཡང་གཞུང་གི་དགྲ་ཟླར་བཟུང་སྟེ་ ཡིད་ཆེས་ཀྱི་དད་པ་མེད་རུང་ མཁན་ཆེན་ཧེ་མའི་ངག་དབང་ཆོས་རྒྱལ་གྱིས་ འབྲུག་སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་མཆོག་ལུ་ ཞབས་དྲུང་སྤྲུལ་སྐུའི་ཐུགས་བདག་ཟིན་པ་ཅིག་མ་འབད་བ་ཅིན་ ལེགས་ཤོམ་མི་འོང་ནིའི་རྒྱུ་མཚན་མནལ་ལམ་གཟིགས་མི་ཚུ་གསུངས་གནངམ་ལས་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་ནི་ ས་སྐྱོང་བགྲེས་པོ་སངས་རྒྱས་བསྟན་འཛིན་གྱི་སྤུར་སྦྱང་ནང་ བཀྲ་ཤིས་ཆོས་རྫོང་ལུ་གདན་འདྲེན་ཞུ་བའི་སྐབས་ མི་དབང་སྡེ་སྲིད་མཆོག་དང་བློན་པོ་ག་ར་གིས་ ཧེ་མའི་ལཱ་འབད་མི་ལུ་བློ་འཁོལ་བའི་སེམས་དྲག་པོའི་བཤགས་པ་དང་བཤགས་རྟེན་འབུལ་བ་རྒྱ་ཆེན་པོར་ཕུལ་ཏེ་ འདི་མན་ཆད་ཞབས་དྲུང་རིན་པོ་ཆེ་བཞུགས་ས་ཡང་གདན་ས་ཕན་ཚུན་གཉིས་ནང་བཞུགས་དགོཔ་དང་ གསོལ་ཐབ་ཡང་སྟབས་གཅིག་ཁར་ཕེབས་དགོ་པའི་གསོལ་བཏབ་ཞུཝ་ད་ ཞབས་དྲུང་རིན་པོ་ཆེ་གིས་ཡང་གསན་ཏེ་ དེ་ལས་ཚུར་ཡོན་ཏན་སྦྱིན་བདག་ཐུགས་སྣང་གཙང་དག་ལུ་གྱུར་སོ་ནུག།
+===== གསུམ་པ་མཁན་ཆེན་ཁྲི་རབས་ཉེར་གཉིས་པའི་མངའ་གསོལ། =====
+མཁན་ཆེན་ཁྲི་རབས་ཉེར་གཉིས་པ་འཇམ་དཔལ་གྲགས་པ་ནི་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་བཅུ་དྲུག་(༡༨༡༦) མེ་བྱི་ལོ་ལུ་ དགོངས་ཞུ་མཛད་དེ་ དགོན་པར་བྱོན་པའི་ཤུལ་མ་མཁན་པོའི་ཕྱག་འགན་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་གསུམ་པ་འཇིགས་མེད་གྲགས་པ་གིས་མཛད་དེ་བཞུགས་པའི་བར་ན་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་བཅུ་དྲུག་(༡༨༡༦) མེ་བྱི་ཟླ་བདུན་པའི་ཚེས་ཉི་ཤུ་ལུ་ མཁན་ཆེན་ཁྲི་ཟུར་ངག་དབང་ཆོས་རྒྱལ་ནི་ དགོངས་པ་རྫོགས་སོངམ་ལས་ མཁན་ཆེན་ཁྲི་ཟེར་གྱི་དགོངས་རྫོགས་ཕྱག་ལཱ་ཚུ་མཇུག་བསྡུཝ་ཅིག་ མཁན་རབས་ཉེར་གཉིས་པའི་ཁྲི་ཐོག་གུར་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་དང་ འབྲུག་སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་ཀྱིས་རྒྱལ་སྲས་སྐུ་འཕྲེང་ལྔ་པ་འཇམ་དཔལ་རྡོ་རྗེའི་ཡོངས་འཛིན་ འཇིགས་མེད་རྒྱལ་མཚན་མཆོག་ནི་ མངའ་གསོལ་ཞུ་ནུག།
+===== བཞི་པ་འབྲུག་དང་བལ་པོའི་མཐུན་འབྲེལ་རྒྱུན་སྐྱོང་ཟད་འགྲོ། ===== 
+ཧེ་མ་ སྡེ་སྲིད་ཁྲི་རབས་ཉེར་བརྒྱད་པ་ ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་གྱིས་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་བཅུ་གསུམ་(༡༨༡༣) པའི་ཆུ་བྱ་ལོ་ལུ་ འབྲུག་པའི་བླ་མ་སངས་རྒྱས་ནོར་བུ་ བལ་ཡུལ་འཕགས་པ་ཤིང་ཀུན་ཉམས་གསོ་ཞུ་བར་བཏང་མི་དེ་ཡང་ སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་སྐབས་ ཉམས་གསོ་ལེགས་ཤོམ་སྦེ་བསྒྲུབས་ཏེ་ལོག་ལྷོདཔ་ལས་ འབྲུག་དང་བལ་གྱི་མཐུན་འབྲེལ་རྒྱུན་སྐྱོང་ངང་ལུ་གནས་ནུག།
+===== ལྔ་པ་རྒྱ་གར་ཕྱི་གཞུང་དང་འབྲེལ་བ་དང་མ་ར་གཱཌ་ས་གནས་ལོག་ཐོབ་ཡོད་པའི་སྐོར། =====
+རྒྱ་གར་ཕྱི་གཞུང་དང་ བལ་ཡུལ་ས་མཚམས་འགྲིགས་མིན་གྱི་དམག་འཁྲུག་ནི་ སྤྱི་ལོ་༡༨༡༤ ནས་༡༨༡༦ ལོ་ལུ་ཐུག་པའི་སྐབས་ཨིནམ་ལས་ ཕྱི་གཞུང་གིས་འབྲུག་གཞུང་ལུ་ བལ་པོའི་རྒྱབ་སྐྱོར་མ་མཛད་པར་བཞུགས་དགོ་པའི་ཞུ་བ་དང་འཁྲིལ་ འབྲུག་གཞུང་གི་བལ་རྒྱབ་མ་མཛད་པར་བཞུགས་ནུག།
+དེ་བསྒང་ འབྲུག་གི་ས་ཁོངས་མ་ར་གཱཌ་ཟེར་མི་འདི་ ཕྱི་གཞུང་གི་སྐྱབས་འཛིན་འོག་གི་ཀུཆ་བི་ཧར་སྲིད་སྐྱོང་བས་དབང་འཛིན་འབད་བའི་སྐོར་ལས་ འབྲུག་དང་ཀུཆ་བི་ཧར་ འགྲིགས་མིན་བྱུངམ་ད་ ཕྱི་གཞུང་གིས་ སྤྱི་ལོ་ ༡༨༡༤ ལུ་ ཀིརི་ཤཱན་ཀཱནཏ་བཱོསི་ཟེར་མི་འདི་ འབྲུག་དང་གཅིག་ཁར་སླབ་པར་བཏང་ནུག། ཀིརི་ཤཱན་ཀཱནཏ་བཱོསི་གསར་སྤང་བརྒྱུད་དེ་ སྤུ་ན་ཁར་འོང་ཞིནམ་ལས་ གསུང་གྲོས་ལེགས་ཤོམ་གནང་ནི་དེ་གིས་ ཕྱི་གཞུང་གིས་ སྤྱི་ལོ་ ༡༨༡༧ པའི་ལོ་ལུ་ མ་ར་གཱཌ་ཟེར་བའི་ས་གནས་འདི་ འབྲུག་གི་དབང་ཚད་ལུ་ལོག་ཐོབ་སྦེ་བཟོ་གནང་ནུག།
+==== སྡེ་སྲིད་ཁྲི་ཐོག་གི་མཛད་པ་མཐའ་མ། ====
+འབྲུག་སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་མཆོག་ནི་ སྤྱི་ལོ་ ༡༨༡༧ པའི་མེ་གླང་ཟླ་བརྒྱད་པའི་ནང་ བསྙུང་གཞི་ཐེབས་ཏེ་ སྐུ་གཟུགས་མ་བདེ་བར་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་དེ་བཞུགས་ནུག།
+==== སྡེ་སྲིད་ཁྲི་ལས་དགོངས་ཞུའི་མཛད་པ། ====
+མེ་གླང་ཟླ་ ༨ པའི་ནང་ སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་མཆོག་ནི་ དགོངས་ཞུ་སྟེ་ལོ་ངོ་དགུ་དེ་ཅིག་ཟུར་བཞུགས་གནངམ་ད་ རྟ་ལོག་གསང་སྔགས་ཆོས་གླིང་ལུ་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་གིས་ རྒྱ་སྐྱེད་མཛདཔ་ད་ མཐུན་རྐྱེན་གྱི་ཞབས་ཏོག་ཡང་ཞུ་ནུག། དེ་ལས་ སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་མཆོག་ནི་ སྤྱི་ལོ་ ༡༨༢༦ པའི་ མེ་ཁྱི་ལོ་ནང་ ཐིམ་ཕུག་ལུ་གསོལ་ཐབ་བཞུགསཔ་ད་ སྐུ་བསྙུངས་ཏེ་གཤགསཔ་ད་ ཞབས་དྲུང་འཇིགས་གྲགས་མཆོག་དང་བྱམས་མགོན་ཡེ་ཤེས་རྡོ་རྗེ་དང་ མཁན་ཁྲི་རབས་ ༢༢ པ་འཇིགས་མེད་རྒྱལ་མཚན་ཚུ་ཡང་ སྤུར་སྦྱང་ལུ་བྱོན་ཏེ་ ཐིམ་ཕུག་རྫོང་ལུ་འབད་སྤུར་སྦྱང་མཛད་གནང་ནུག།
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
