/* སྡེ་སྲིད་ཁྲི་ལས་དགོངས་ཞུའི་མཛད་པ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -470,7 +470,30 @@
 ==== སྡེ་སྲིད་ཁྲི་ཐོག་གི་མཛད་པ་མཐའ་མ། ====
 འབྲུག་སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་མཆོག་ནི་ སྤྱི་ལོ་ ༡༨༡༧ པའི་མེ་གླང་ཟླ་བརྒྱད་པའི་ནང་ བསྙུང་གཞི་ཐེབས་ཏེ་ སྐུ་གཟུགས་མ་བདེ་བར་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་དེ་བཞུགས་ནུག།
 ==== སྡེ་སྲིད་ཁྲི་ལས་དགོངས་ཞུའི་མཛད་པ། ====
-མེ་གླང་ཟླ་ ༨ པའི་ནང་ སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་མཆོག་ནི་ དགོངས་ཞུ་སྟེ་ལོ་ངོ་དགུ་དེ་ཅིག་ཟུར་བཞུགས་གནངམ་ད་ རྟ་ལོག་གསང་སྔགས་ཆོས་གླིང་ལུ་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་གིས་ རྒྱ་སྐྱེད་མཛདཔ་ད་ མཐུན་རྐྱེན་གྱི་ཞབས་ཏོག་ཡང་ཞུ་ནུག། དེ་ལས་ སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་མཆོག་ནི་ སྤྱི་ལོ་ ༡༨༢༦ པའི་ མེ་ཁྱི་ལོ་ནང་ ཐིམ་ཕུག་ལུ་གསོལ་ཐབ་བཞུགསཔ་ད་ སྐུ་བསྙུངས་ཏེ་གཤགསཔ་ད་ ཞབས་དྲུང་འཇིགས་གྲགས་མཆོག་དང་བྱམས་མགོན་ཡེ་ཤེས་རྡོ་རྗེ་དང་ མཁན་ཁྲི་རབས་ ༢༢ པ་འཇིགས་མེད་རྒྱལ་མཚན་ཚུ་ཡང་ སྤུར་སྦྱང་ལུ་བྱོན་ཏེ་ ཐིམ་ཕུག་རྫོང་ལུ་འབད་སྤུར་སྦྱང་མཛད་གནང་ནུག།
+<big>མེ་གླང་ཟླ་ ༨ པའི་ནང་ སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་མཆོག་ནི་ དགོངས་ཞུ་སྟེ་ལོ་ངོ་དགུ་དེ་ཅིག་ཟུར་བཞུགས་གནངམ་ད་ རྟ་ལོག་གསང་སྔགས་ཆོས་གླིང་ལུ་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་གིས་ རྒྱ་སྐྱེད་མཛདཔ་ད་ མཐུན་རྐྱེན་གྱི་ཞབས་ཏོག་ཡང་ཞུ་ནུག། དེ་ལས་ སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་མཆོག་ནི་ སྤྱི་ལོ་ ༡༨༢༦ པའི་ མེ་ཁྱི་ལོ་ནང་ ཐིམ་ཕུག་ལུ་གསོལ་ཐབ་བཞུགསཔ་ད་ སྐུ་བསྙུངས་ཏེ་གཤགསཔ་ད་ ཞབས་དྲུང་འཇིགས་གྲགས་མཆོག་དང་བྱམས་མགོན་ཡེ་ཤེས་རྡོ་རྗེ་དང་ མཁན་ཁྲི་རབས་ ༢༢ པ་འཇིགས་མེད་རྒྱལ་མཚན་ཚུ་ཡང་ སྤུར་སྦྱང་ལུ་བྱོན་ཏེ་ ཐིམ་ཕུག་རྫོང་ལུ་འབད་སྤུར་སྦྱང་མཛད་གནང་ནུག།</big>
+
+=== སྡེ་སྲིད་ཁྲི་རབས་སོ་གཉིས་པ་སྤུངས་རྫོང་པ་བསྟན་འཛིན་འབྲུག་སྒྲའི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་མ་མཛད་གོང་གི་མཛད་པ། ====
+<big>སྤྱི་ལོ་ ༡༧༧༡ ལྕགས་ཡོས་ལོར་ འབྲུག་སྡེ་སྲིད་བསྟན་འཛིན་འབྲུག་སྒྲ་མཆོག་ནི་ ཝང་ཚོ་ཆེན་བརྒྱད་ཀྱི་ཡ་གྱལ་སྨད་ཝང་དར་ལུང་ཁ་ལུ་སྐུ་འཁྲུངས་ཏེ་ མཚན་ཡང་བསྟན་འཛིན་འབྲུག་སྒྲ་ཟེར་གསོལ་ནུག།<br>
+མི་དབང་སྡེ་སྲིད་མཆོག་ནི་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ རྫོང་གོང་མའི་སྒྲིག་ལམ་ལུ་ཞུགས་ཏེ་ རིམ་པ་བཞིན་དུ་ ཆིབས་ཞོནམ་དང་གཉིས་སྐལ་མའི་གོ་གནས་ལས་ སྤུངས་རྫོང་པའི་བདག་རྐྱེན་དང་ དེ་ལས་གོང་གཟིམ་གྱི་བདག་རྐྱེན་བཞེས་ཏེ་བཞུགས་སྡོད་ནུག།</big>
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་དུས་སྟབས་ཀྱི་རྟེན་འབྲེལ། ====
+<big>མི་དབང་སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱལ་ནི་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་བཅུ་བདུན་ (༡༨༡༧) མེ་གླང་ཟླ་ ༨ པའི་ནང་ སྐུ་བསྙུངས་ཏེ་ དགོངས་ཞུ་མཛད་དགོཔ་ཐོནམ་ལས་ མཁན་སློབ་འདུས་ཚོགས་ཀྱིས་བཀའ་གནང་སྟེ་ སྡེ་སྲིད་ཁྲི་རབས་སོ་གཉིས་པའི་ཁྲི་ལུ་ ལྷ་མོའི་སྒྲུབ་མཆོད་གྲོལཝ་ཅིག་ གོང་གཟིམ་བསྟན་འཛིན་འབྲུག་སྒྲ་དེ་ མངའ་གསོལ་ཞུ་ཡོདཔ་ཨིན་པས།</big>
+    
+==== སྡེ་སྲིད་ཁྲི་ཐོག་གི་ཕྱག་ཤུལ། ====
+===== དང་པ་མདོ་སྡེ་བྲག་ལུ་བཀའ་འགྱུར་གསར་བཞེངས་པ། =====
+<big>ས་སྐྱོང་མི་དབང་སྡེ་སྲིད་བསྟན་འཛིན་འབྲུག་སྒྲ་ནི་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་བཅུ་བརྒྱད་ ༡༨༡༨ ས་སྟག་ལོར་ རྗེ་ཡོན་ཏན་མཐའ་ཡས་ཀྱི་གདན་ས་མདོ་སྡེ་བྲག་གི་བཀའ་འགྱུར་གསར་བཞེངས་མཛད་གནང་ནུག། དེ་གི་འབྲེལ་ཞུའི་དོན་ལུ་ཤུལ་མ་མཁན་རབས་ ༢༥ པ་མཛད་མི་ རྗེ་ཤེས་རབ་རྒྱལ་མཚན་གྱིས་མ་ཀྲམ་ཁལ་བཅུ་གཉིས་ཡང་ཕུལ་ནུག།</big>
+===== གཉིས་པ་གསང་སྔགས་ཆོས་གླིང་གདན་ས་རྒྱ་སྐྱེད་ཀྱི་ཞབས་ཏོག། =====
+<big>རྟ་ལོག་གསང་སྔགས་ཆོས་གླིང་གདན་ས་ལུ་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་གསུམ་པ་འཇིགས་མེད་གྲགས་པ་མཆོག་གིས་ རྒྱ་སྐྱེད་མཛད་གནངམ་ད་ ཉེར་འཁོའི་མཐུན་རྐྱེན་དང་ཞབས་ཏོག་རྒྱ་ཆེ་བར་མཛདཔ་མ་ཚད་ རབ་གནས་ཀྱི་སྐབས་ལུ་ཡང་ སྐུ་མགྲོན་གཙོ་བོ་སྡེ་སྲིད་མཆོག་བྱོན་ཏེ་ དགའ་སྟོན་ཟབ་རྒྱས་མཛད་གནང་ནུག།</big>
+===== གསུམ་པ་ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་ངོ་རྒོལ་ལས་བརྟེན་རྒྱལ་ཁ་ཐོབ་ཡོདཔ། =====
+<big>ཆོས་རྩེ་དཔོན་སློབ་དཔྲལ་བ་གིས་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་ཉེར་གཅིག་ (༡༨༢༡) ལྕགས་སྤྲེལ་ལོར་ གསོལ་ཐབ་སྤུ་ན་ཁར་བཞུགསཔ་ད་ འབྲུག་གཞུང་ལུ་ངོ་རྒོལ་གྱི་གྲ་སྒྲིག་འབད་དེ་ ཞབས་དྲུང་འཇིགས་གྲགས་མཆོག་ལུ་ དེ་ལུགས་ཀྱི་ཞུ་བ་འབུལ་ཆེན་བཅས་ངོམ་རྐང་བཙུགས་ཕུལ་བར་བཏངམ་མ་ཚད་ ཞབས་དྲུང་མཆོག་གིས་ དམག་འཛིང་གི་ལཱ་འདི་ཆ་མེད་གཏང་ད་ཟེར་བཀའ་གནང་རུང་མ་ཉན་པར་ གཞུང་ལུ་ངོ་རྒོལ་འབད་ནི་འགོ་བཙུགསཔ་ད་ གསོལ་ཐབ་ཐིམ་ཕུག་བྱོན་ཞིནམ་ལས་ གཞུང་དམག་ཀྲོང་གསར་ལུ་བཙུགས་ཏེ་ དམག་ཐག་ཆོད་མ་ཚུགས་པར་ མི་མང་སྡུག་ལུ་བཀོད་པའི་དུས་ངན་ཤར་ནུག།<br>
+དེ་ལས་མཁན་ཆེན་ཁྲི་པ་འཇིགས་མེད་རྒྱལ་མཚན་དང་ ཁྲི་ཟུར་འཇམ་དཔལ་གྲགས་པ་རྣམ་གཉིས་ཐུགས་སྙིང་རྗེས་མ་བཟོད་པར་ ཀྲོང་གསར་ལུ་བྱོན་ནུག། དཔོན་སློབ་འདས་པའི་མེ་སྦྱང་ཡང་ བླ་ཆེན་རྣམ་གཉིས་ཀྲོང་གསར་ལུ་ཕེབསཔ་ད་མཛད་དེ་བྱོན་ནུག།</big>
+===== བཞི་པ་མཁན་ཆེན་འཇམ་དབྱངས་རྒྱལ་མཚན་གྱི་ཡང་སྲིད་ལུ་མཐོང་བཟོས་ཀྱི་གཟེངས་བསྟོད། =====
+<big>འཇམ་དབྱངས་ལྷུན་གྲུབ་འདི་བོད་ལུ་ མཁན་ཆེན་ཁྲི་རབས་བཅོ་བརྒྱད་པ་འཇམ་དཔལ་རྒྱལ་མཚན་གྱི་ ཡང་སྲིད་དུ་སྐུ་འཁྲུངས་པ་དང་ ཁོ་རའི་སློབ་མ་དམ་པ་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་གིས་ ཐབས་ཤེས་ལེ་ཤ་ཐོག་ལས་ འབྲུག་ལུ་གདན་འདྲེན་ཞུ་སྟེ་ སྤུ་ན་ཁ་ལུ་ཁྲི་སྟོན་རྟེན་འབྲེལ་མཛདཔ་ད་ ས་སྐྱོང་མི་དབང་མཆོག་གིས་དཔང་མཐོ་བའི་གནང་སྦྱིན་གྱི་ལེགས་འབུལ་དང་ ཞབས་དྲུང་གི་བཀའ་དང་བསྟུན་ཏེ་ གྲྭ་ཚང་གི་རྡོ་རྗེ་སློབ་དཔོན་དང་མཉམ་པའི་བདག་རྐྱེན་ཡང་ཕུལ་ནུག།</big>
+==== སྡེ་སྲིད་ཁྲི་ཐོག་གི་མཛད་པ་མཐའ་མ། ====
+<big>ས་སྐྱོང་བསྟན་འཛིན་འབྲུག་སྒྲ་མཆོག་ནི་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་ཉེར་གཅིག་ (༡༨༢༡) ཆུ་རྟ་ལོའི་ནང་ སྤུ་ན་ཁར་ཕེབས་ཏེ་ དགུན་གྱི་མཛད་སྒོ་ཚུ་བསྒྲུབས་ཞིནམ་ད་ དགོན་པར་འབྱོན་ནིའི་ཐུགས་བཞེད་གནང་བཞིན་ རྒྱལ་སྲིད་སྤངས་ཏེ་ ཟུར་བཞུགས་མཛད་གནང་ནུག།</big>
+==== སྡེ་སྲིད་ལས་དགོངས་ཞུའི་རྗེས་ཀྱི་མཛད་པ། ====
+<big>སྡེ་སྲིད་ཁྲི་རབས་སོ་གཉིས་པ་ས་སྐྱོང་མི་དབང་སྤུངས་རྫོང་པ་ བསྟན་འཛིན་འབྲུག་སྒྲ་མཆོག་ནི་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་དེ་ སེམས་རྟོགས་ཁར་བཞུགས་ནུག། <br>
+སྤྱི་ལོ་༡༨༣༧ ༡༨༣༩ ༡༨༤༠ ༡༨༤༢ ལོ་ཚུའི་ ནང་འཁྲུག་ཚུ་གི་སྐབས་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་འཇིགས་མེད་གྲགས་པ་རྩ་བའི་བླམ་སྦེ་བསྟེན་ཏེ་ ཞབས་ཏོག་ཞུཝ་མ་ཚད་ ཐུགས་འཚེར་བ་མ་གཟིགས་པར་ ནང་འགྲིགས་བཟོ་ནི་དང་འཁོན་འདུམ་གྱི་བར་དཔང་ལུ་ལོག་ཅི་ར་ཐོན་ཏེ་ རྒྱལ་ཁབ་ཀྱི་དགའ་སྐྱིད་དང་ཞི་བདེ་ལུ་ རྒྱབ་སྐྱོར་མཛད་བཞིན་དུ་ སྤྱི་ལོ་ ༡༨༤༤ མེ་ལུག་ལོ་ལུ་ གཤགས་སོ་ནུག།</big>
 
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
