/* དང་པ་སྐུ་འཁྲུངས་པ་དང་ཆོས་རྗེས་འབྲུག་པའི་སྒར་ལྟོའི་གྲལ་དུ་ཞུགས་པ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -449,8 +449,9 @@
 === སྡེ་སྲིད་ཁྲི་རབས་སོ་གཅིག་པ་ ཐིམ་རྫོང་པ་བསོད་ནམས་འབྲུག་རྒྱས་ཀྱི་མཛད་རྣམ། ===
 ==== སྡེ་སྲིད་མ་མཛད་པའི་ཧེ་མ། ====
 ===== དང་པ་སྐུ་འཁྲུངས་པ་དང་ཆོས་རྗེས་འབྲུག་པའི་སྒར་ལྟོའི་གྲལ་དུ་ཞུགས་པ། =====
-སྡེ་སྲིད་ཁྲི་རབས་སོ་གཅིག་པའི་མཚན་ཡང་ བསོད་ནམས་འབྲུག་རྒྱས་ཟེར་ གསོལ་དགོ་པའི་དགོས་པ་ཡང་ ཝང་ཚོ་ཆེན་བརྒྱད་ཀྱི་ཡ་གྱལ་སྟོད་ཝང་སྲིན་མོ་ལུ་འཁྲུངས་ནི་འདི་གིས་ཨིན་པས། ཁོ་ར་འདི་ གཞོན་སྐྱེས་ལངམ་ད་ ཁོ་ར་དང་ཁོ་རའི་གཡུས་ཁར་ལས་འབད་མི་ཆ་རོགས་ སྟོད་ཝང་དར་ལུང་པ་མ་ཧཱ་བྷ་ལ་བུམ་ཐང་བྱ་དཀར་རྫོང་དཔོན་འབད་དེ་བཞུགས་ས་ལུ་ གནས་སྐོར་བྱོན་པའི་སྐབས་ དགེ་སློང་གི་གཡོག་རྒྱུག་མི་སྦེ་ སྒྲིག་རྒྱུག་སྟེ་བཞུགས་ནུག།
-དེ་བསྒང་ ཧེ་མ་སྤྲུལ་སྐུ་མཆོག་ལྡན་མགོན་པོའི་དགོན་གནས་ བུམ་ཐང་བླ་མའི་དགོན་པའི་གདན་ས་ལུ་ བྱ་དཀར་རྫོང་གི་ཉེ་འདབས་ལྷ་ལུང་དཔལ་རྡོར་གྱི་གདུང་བརྒྱུད་ བྱ་དཀར་གདུང་གི་ཁྱིམ་ནང་ལས་ ནོར་བུ་སྒྲོན་མ་དང་གཉེན་དུ་བསྡོམས་ཏེ་ བཞུགས་པའི་ཐ་མ་ ཁོང་གཉིས་ལུ་ སྲས་ལྔ་དང་སྲོས་མོ་གཉིས་བྱུང་ནུག། གཏམ་ཞིང་ཆོས་རྗེ་ཨོ་རྒྱན་ཕུན་ཚོགས་ཀྱི་ བྱུང་བའི་སྤུན་ཆ་རྒན་ཤོས་སྲས་མོ་རིན་ཆེན་པདྨོ་དེ་དང་ གཉེན་གཅིག་ཁར་བསྡོམས་པའི་བཟའ་ཚང་ལུ་གྱུར་པའི་ སྲས་མོ་པདྨ་ཆོས་སྐྱིད་འདི་ཤུལ་མ་ གོང་ས་འཇིགས་མེད་རྣམ་རྒྱལ་བཙུན་མོ་བཞེས་སྟེ་སྡོད་ཡོདཔ་ཨིན་པས།
+<big>སྡེ་སྲིད་ཁྲི་རབས་སོ་གཅིག་པའི་མཚན་ཡང་ བསོད་ནམས་འབྲུག་རྒྱས་ཟེར་ གསོལ་དགོ་པའི་དགོས་པ་ཡང་ ཝང་ཚོ་ཆེན་བརྒྱད་ཀྱི་ཡ་གྱལ་སྟོད་ཝང་སྲིན་མོ་ལུ་འཁྲུངས་ནི་འདི་གིས་ཨིན་པས། ཁོ་ར་འདི་ གཞོན་སྐྱེས་ལངམ་ད་ ཁོ་ར་དང་ཁོ་རའི་གཡུས་ཁར་ལས་འབད་མི་ཆ་རོགས་ སྟོད་ཝང་དར་ལུང་པ་མ་ཧཱ་བྷ་ལ་བུམ་ཐང་བྱ་དཀར་རྫོང་དཔོན་འབད་དེ་བཞུགས་ས་ལུ་ གནས་སྐོར་བྱོན་པའི་སྐབས་ དགེ་སློང་གི་གཡོག་རྒྱུག་མི་སྦེ་ སྒྲིག་རྒྱུག་སྟེ་བཞུགས་ནུག།<br>
+དེ་བསྒང་ ཧེ་མ་སྤྲུལ་སྐུ་མཆོག་ལྡན་མགོན་པོའི་དགོན་གནས་ བུམ་ཐང་བླ་མའི་དགོན་པའི་གདན་ས་ལུ་ བྱ་དཀར་རྫོང་གི་ཉེ་འདབས་ལྷ་ལུང་དཔལ་རྡོར་གྱི་གདུང་བརྒྱུད་ བྱ་དཀར་གདུང་གི་ཁྱིམ་ནང་ལས་ ནོར་བུ་སྒྲོན་མ་དང་གཉེན་དུ་བསྡོམས་ཏེ་ བཞུགས་པའི་ཐ་མ་ ཁོང་གཉིས་ལུ་ སྲས་ལྔ་དང་སྲོས་མོ་གཉིས་བྱུང་ནུག། གཏམ་ཞིང་ཆོས་རྗེ་ཨོ་རྒྱན་ཕུན་ཚོགས་ཀྱི་ བྱུང་བའི་སྤུན་ཆ་རྒན་ཤོས་སྲས་མོ་རིན་ཆེན་པདྨོ་དེ་དང་ གཉེན་གཅིག་ཁར་བསྡོམས་པའི་བཟའ་ཚང་ལུ་གྱུར་པའི་ སྲས་མོ་པདྨ་ཆོས་སྐྱིད་འདི་ཤུལ་མ་ གོང་ས་འཇིགས་མེད་རྣམ་རྒྱལ་བཙུན་མོ་བཞེས་སྟེ་སྡོད་ཡོདཔ་ཨིན་པས།</big>
+
 ===== གཉིས་པ་གོ་གནས་རིམ་པ་མ་འདྲཝ་བཞེས་པའི་སྐོར། =====
 འབྲུག་སྡེ་སྲིད་སོ་དགུ་པ་བསོད་ནམས་འབྲུག་རྒྱས་མཆོག་ནི་ འབྲུག་སྡེ་སྲིད་མ་མཛད་པའི་ཧེ་མ་ སྟོད་ཝང་དར་ལུང་པ་མ་ཧཱ་བྷ་ལ་བུམ་ཐང་བྱ་དཀར་རྫོང་དཔོན་འོག་ ཕྱག་ཞུས་ཏེ་ལོ་དག་པ་ཅིག་ལས་ར་ ཆིབས་ཞོན་པའི་གོ་གནས་ བུམ་ཐང་བྱ་དཀར་རྫོང་གི་སྒོ་སྲུང་པའི་གོ་གནས་བཞེས་ཏེ་བཞུགསཔ་ད་ ཁོ་རའི་ལྕོགས་གྲུབ་ཆེན་པོ་ལས་བརྟེན་གཉིས་སྐལ་མའི་གོ་གནས་ ཀྲོང་གསར་གཟིམ་དཔོན་ཐོབ་པའི་ཁར་ ད་རུང་ ཡུན་མ་རིངམ་ཅིག་ཁར་ ཀྲོང་གསར་ལུ་ཁོ་གིས་ ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་གོ་གནས་དང་ དེའི་ཤུལ་ལས་ ཐིམ་ཕུག་ལུ་ཡང་ ཐིམ་ཕུག་རྫོང་དཔོན་གྱི་གོ་གནས་ཚུ་ རིམ་པ་བཞིན་དུ་བཞེས་ཏེ་ བཞུགས་སྡོད་སྡོདཔ་ཨིན་པས། 
 ==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ཡོད་པའི་སྐོར། ==== 
