/* གཉིས་པ་གོ་གནས་རིམ་པ་མ་འདྲཝ་བཞེས་པའི་སྐོར། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -453,7 +453,8 @@
 དེ་བསྒང་ ཧེ་མ་སྤྲུལ་སྐུ་མཆོག་ལྡན་མགོན་པོའི་དགོན་གནས་ བུམ་ཐང་བླ་མའི་དགོན་པའི་གདན་ས་ལུ་ བྱ་དཀར་རྫོང་གི་ཉེ་འདབས་ལྷ་ལུང་དཔལ་རྡོར་གྱི་གདུང་བརྒྱུད་ བྱ་དཀར་གདུང་གི་ཁྱིམ་ནང་ལས་ ནོར་བུ་སྒྲོན་མ་དང་གཉེན་དུ་བསྡོམས་ཏེ་ བཞུགས་པའི་ཐ་མ་ ཁོང་གཉིས་ལུ་ སྲས་ལྔ་དང་སྲོས་མོ་གཉིས་བྱུང་ནུག། གཏམ་ཞིང་ཆོས་རྗེ་ཨོ་རྒྱན་ཕུན་ཚོགས་ཀྱི་ བྱུང་བའི་སྤུན་ཆ་རྒན་ཤོས་སྲས་མོ་རིན་ཆེན་པདྨོ་དེ་དང་ གཉེན་གཅིག་ཁར་བསྡོམས་པའི་བཟའ་ཚང་ལུ་གྱུར་པའི་ སྲས་མོ་པདྨ་ཆོས་སྐྱིད་འདི་ཤུལ་མ་ གོང་ས་འཇིགས་མེད་རྣམ་རྒྱལ་བཙུན་མོ་བཞེས་སྟེ་སྡོད་ཡོདཔ་ཨིན་པས།</big>
 
 ===== གཉིས་པ་གོ་གནས་རིམ་པ་མ་འདྲཝ་བཞེས་པའི་སྐོར། =====
-འབྲུག་སྡེ་སྲིད་སོ་དགུ་པ་བསོད་ནམས་འབྲུག་རྒྱས་མཆོག་ནི་ འབྲུག་སྡེ་སྲིད་མ་མཛད་པའི་ཧེ་མ་ སྟོད་ཝང་དར་ལུང་པ་མ་ཧཱ་བྷ་ལ་བུམ་ཐང་བྱ་དཀར་རྫོང་དཔོན་འོག་ ཕྱག་ཞུས་ཏེ་ལོ་དག་པ་ཅིག་ལས་ར་ ཆིབས་ཞོན་པའི་གོ་གནས་ བུམ་ཐང་བྱ་དཀར་རྫོང་གི་སྒོ་སྲུང་པའི་གོ་གནས་བཞེས་ཏེ་བཞུགསཔ་ད་ ཁོ་རའི་ལྕོགས་གྲུབ་ཆེན་པོ་ལས་བརྟེན་གཉིས་སྐལ་མའི་གོ་གནས་ ཀྲོང་གསར་གཟིམ་དཔོན་ཐོབ་པའི་ཁར་ ད་རུང་ ཡུན་མ་རིངམ་ཅིག་ཁར་ ཀྲོང་གསར་ལུ་ཁོ་གིས་ ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་གོ་གནས་དང་ དེའི་ཤུལ་ལས་ ཐིམ་ཕུག་ལུ་ཡང་ ཐིམ་ཕུག་རྫོང་དཔོན་གྱི་གོ་གནས་ཚུ་ རིམ་པ་བཞིན་དུ་བཞེས་ཏེ་ བཞུགས་སྡོད་སྡོདཔ་ཨིན་པས། 
+<big>འབྲུག་སྡེ་སྲིད་སོ་དགུ་པ་བསོད་ནམས་འབྲུག་རྒྱས་མཆོག་ནི་ འབྲུག་སྡེ་སྲིད་མ་མཛད་པའི་ཧེ་མ་ སྟོད་ཝང་དར་ལུང་པ་མ་ཧཱ་བྷ་ལ་བུམ་ཐང་བྱ་དཀར་རྫོང་དཔོན་འོག་ ཕྱག་ཞུས་ཏེ་ལོ་དག་པ་ཅིག་ལས་ར་ ཆིབས་ཞོན་པའི་གོ་གནས་ བུམ་ཐང་བྱ་དཀར་རྫོང་གི་སྒོ་སྲུང་པའི་གོ་གནས་བཞེས་ཏེ་བཞུགསཔ་ད་ ཁོ་རའི་ལྕོགས་གྲུབ་ཆེན་པོ་ལས་བརྟེན་གཉིས་སྐལ་མའི་གོ་གནས་ ཀྲོང་གསར་གཟིམ་དཔོན་ཐོབ་པའི་ཁར་ ད་རུང་ ཡུན་མ་རིངམ་ཅིག་ཁར་ ཀྲོང་གསར་ལུ་ཁོ་གིས་ ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་གོ་གནས་དང་ དེའི་ཤུལ་ལས་ ཐིམ་ཕུག་ལུ་ཡང་ ཐིམ་ཕུག་རྫོང་དཔོན་གྱི་གོ་གནས་ཚུ་ རིམ་པ་བཞིན་དུ་བཞེས་ཏེ་ བཞུགས་སྡོད་སྡོདཔ་ཨིན་པས།</big>
+
 ==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ཡོད་པའི་སྐོར། ==== 
 ཐིམ་རྫོང་པ་བསོད་ནམས་འབྲུག་རྒྱས་ཀྱི་ སྡེ་སྲིད་སུམ་ཅུ་པ་ཚ་ཕུགས་རྡོ་རྗེ་མཆོག་ནི་ ཁྲི་ཐོག་གུར་ ཟླ་ངོ་ ༥ དེ་ཅིག་འགྱོཝ་ད་བཀྲོང་མི་དེ་ཡང་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་བཅུ་གཅིག་(༡༨༡༡) ལྕགས་ལུག་ཟླ་ལྔ་པའི་ནང་ ཀྲོང་གསར་དཔོན་སློབ་ཚ་ཕུགས་རྡོ་རྗེ་ནི་ སྡེ་སྲིད་སུམ་ཅུ་པའི་ཁྲི་ལུ་བཞུགསཔ་ད་ ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་ཁྲི་འདི་ ཧེ་མ་བསོད་ནམས་འབྲུག་རྒྱས་ཀྱིས་མཛད་ཡོདཔ་ཨིན་རུང་ སྡེ་སྲིད་ཁྲི་ཐོག་ནི་ སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་ཀྱི་ཧེ་མ་ ཚ་ཕུགས་རྡོ་རྗེ་གིས་མཛད་མི་ལུ་ངལ་མ་རངས་པར་ ཐིམ་རྫོང་པ་བསོད་ནམས་འབྲུག་རྒྱས་ཀྱིས་ སྡེ་སྲིད་སུམ་ཅུ་པ་ཚ་ཕུགས་རྡོ་རྗེ་ནི་ སྡེ་པའི་ཁྲི་ཐོག་ཁར་ར་བཀྲོངས་བཏང་ནུག། དེ་ལས་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་བཅུ་གཉིས་(༡༨༡༢) པའི་ཆུ་སྤྲེལ་ལོའི་ནང་ རྫོང་ཁག་ཡོངས་ཀྱི་རྫོང་དཔོན་ག་ར་འཛོམས་བཞིན་ ཐིམ་ཕུག་རྫོང་དཔོན་བསོད་ནམས་འབྲུག་རྒྱས་ནི་ གསོལ་ཐབས་སྤུ་ན་ཁར་ཕེབས་ཞིནམ་ལས་ སྡེ་སྲིད་ཁྲི་རབས་སོ་གཅིག་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ནུག།
 སྡེ་སྲིད་ཁྲི་ཐོག་གི་ཕྱག་ཤུལ།
