--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -473,7 +473,8 @@
 </big>
 
 ==== སྡེ་སྲིད་ཁྲི་ཐོག་གི་མཛད་པ་མཐའ་མ། ====
-འབྲུག་སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་མཆོག་ནི་ སྤྱི་ལོ་ ༡༨༡༧ པའི་མེ་གླང་ཟླ་བརྒྱད་པའི་ནང་ བསྙུང་གཞི་ཐེབས་ཏེ་ སྐུ་གཟུགས་མ་བདེ་བར་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་དེ་བཞུགས་ནུག།
+<big>འབྲུག་སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་མཆོག་ནི་ སྤྱི་ལོ་ ༡༨༡༧ པའི་མེ་གླང་ཟླ་བརྒྱད་པའི་ནང་ བསྙུང་གཞི་ཐེབས་ཏེ་ སྐུ་གཟུགས་མ་བདེ་བར་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་དེ་བཞུགས་ནུག།</big>
+
 ==== སྡེ་སྲིད་ཁྲི་ལས་དགོངས་ཞུའི་མཛད་པ། ====
 <big>མེ་གླང་ཟླ་ ༨ པའི་ནང་ སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་མཆོག་ནི་ དགོངས་ཞུ་སྟེ་ལོ་ངོ་དགུ་དེ་ཅིག་ཟུར་བཞུགས་གནངམ་ད་ རྟ་ལོག་གསང་སྔགས་ཆོས་གླིང་ལུ་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་གིས་ རྒྱ་སྐྱེད་མཛདཔ་ད་ མཐུན་རྐྱེན་གྱི་ཞབས་ཏོག་ཡང་ཞུ་ནུག། དེ་ལས་ སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་མཆོག་ནི་ སྤྱི་ལོ་ ༡༨༢༦ པའི་ མེ་ཁྱི་ལོ་ནང་ ཐིམ་ཕུག་ལུ་གསོལ་ཐབ་བཞུགསཔ་ད་ སྐུ་བསྙུངས་ཏེ་གཤགསཔ་ད་ ཞབས་དྲུང་འཇིགས་གྲགས་མཆོག་དང་བྱམས་མགོན་ཡེ་ཤེས་རྡོ་རྗེ་དང་ མཁན་ཁྲི་རབས་ ༢༢ པ་འཇིགས་མེད་རྒྱལ་མཚན་ཚུ་ཡང་ སྤུར་སྦྱང་ལུ་བྱོན་ཏེ་ ཐིམ་ཕུག་རྫོང་ལུ་འབད་སྤུར་སྦྱང་མཛད་གནང་ནུག།</big>
 
