/* སྡེ་སྲིད་ལས་དགོངས་ཞུའི་རྗེས་ཀྱི་མཛད་པ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -501,6 +501,36 @@
 <big>སྡེ་སྲིད་ཁྲི་རབས་སོ་གཉིས་པ་ས་སྐྱོང་མི་དབང་སྤུངས་རྫོང་པ་ བསྟན་འཛིན་འབྲུག་སྒྲ་མཆོག་ནི་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་དེ་ སེམས་རྟོགས་ཁར་བཞུགས་ནུག། <br>
 སྤྱི་ལོ་༡༨༣༧ ༡༨༣༩ ༡༨༤༠ ༡༨༤༢ ལོ་ཚུའི་ ནང་འཁྲུག་ཚུ་གི་སྐབས་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་འཇིགས་མེད་གྲགས་པ་རྩ་བའི་བླམ་སྦེ་བསྟེན་ཏེ་ ཞབས་ཏོག་ཞུཝ་མ་ཚད་ ཐུགས་འཚེར་བ་མ་གཟིགས་པར་ ནང་འགྲིགས་བཟོ་ནི་དང་འཁོན་འདུམ་གྱི་བར་དཔང་ལུ་ལོག་ཅི་ར་ཐོན་ཏེ་ རྒྱལ་ཁབ་ཀྱི་དགའ་སྐྱིད་དང་ཞི་བདེ་ལུ་ རྒྱབ་སྐྱོར་མཛད་བཞིན་དུ་ སྤྱི་ལོ་ ༡༨༤༤ མེ་ལུག་ལོ་ལུ་ གཤགས་སོ་ནུག།</big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་སོ་གསུམ་པ་ས་སྐྱོང་མི་དབང་ཐིམ་རྫོང་པ་ཕུར་རྒྱལ་ལམ་ཆོས་ཀྱི་རྒྱལ་མཚན་གྱི་མཛད་རྣམ། ===
+==== སྐུ་འཁྲུངས་པ་དང་གྲྭ་ཚང་གི་སྒྲིག་ལུ་ཞུགས་པ། ====
+<big>སྤྱི་ལོ་ཆིག་སྟོང་བདུན་བརྒྱ་བདུན་ཅུ་དོན་བཞི་ཤིང་རྟའི་ལོ་ནང་ འབྲུག་སྡེ་སྲིད་ཁྲི་རབས་སོ་གསུམ་པ་ཕུར་རྒྱལ་ཡང་ན་ཆོས་ཀྱི་རྒྱལ་མཚན་ནི། ཝང་ཚོ་ཆེན་བརྒྱད་ཡོད་པའི་ནང་ལས་སྟོད་ཁ་ཐུག་ལས་ཝང་ཁོངས་གཏོགས་ སི་ཁྱོད་ནང་སྐུ་འཁྲུངས་ཏེ་ མཚན་ཡང་ཕུར་རྒྱལ་ཟེར་གསོལ་ནུག། སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་གྲྭ་ཚང་ནང་ དགེ་འདུན་གྱི་སྡེར་ཞུགས་པའི་ཆོས་མིང་ཆོས་ཀྱི་རྒྱལ་མཚན་གསོལ་ཏེ་ སྐུ་ཡོན་ལེགས་ཤོམ་སྦེ་སྦྱངས་གནང་ནུག། 
+</big>==== རྫོང་གོང་མའི་སྒྲིག་ལུ་ཞུགས་ཏེ་བདག་རྐྱེན་རིམ་པར་བཞེས་པ། ====
+<big>སྐུ་ན་ཆུང་ཀུ་བསྒང་ལས་གྲྭ་ཚང་ནང་ དགེ་འདུན་གྱི་སྡེར་ཞུགས་བཞིན་ རྫོང་གོང་མའི་སྒྲིག་ལུ་ཞུགས་ཏེ་ དཔལ་ལྡན་འབྲུག་པའི་སྒྲིག་ལམ་རྣམ་གཞག་དང་ ཆོས་སྲིད་ལུགས་གཉིས་ཁྲིམས་ཀྱི་རིང་ལུགས་ལུ་རང་བྱོན་ཚུདཔ་ལས་ དང་པ་ར་ཐིམ་ཕུག་གཉེར་ཆེན་གྱི་གོ་གནས་དང་ དེ་གི་ཤུལ་ལས་ ཐིམ་ཕུག་རྫོང་དཔོན་གྱི་གོ་གནས་བཞེས་ཏེ་བཞུགས་ནུག།
+</big>==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བསྐོ་བཞག་གི་མཛད་སྒོ། ==== 
+སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་ཉེར་གཉིས་ (༡༨༢༢) ཆུ་རྟ་ལོའི་དགེ་འདུན་གྱི་གསོལ་ཐབ་ སྤུ་ན་ཁ་ལུ་བཞུགས་པའི་སྐབས་ དེ་བསྒང་གི་རྒྱལ་པོ་བསྟན་འཛིན་འབྲུག་སྒྲ་ནི་ དགོན་པར་འབྱོན་ནི་སྦེ་ རྒྱལ་སྲིད་སྤངས་ཏེ་ ཟུར་བཞུགས་གནངམ་ལས་ ཐིམ་རྫོང་པ་ཆོས་ཀྱི་རྒྱལ་མཚན་ནི་ འབྲུག་སྡེ་སྲིད་ཁྲི་རབས་ སོ་གསུམ་པ་ལུ་མངའ་གསོལ་གནང་ནུག།
+
+=== སྡེས་སྲིད་ཁྲི་ཐོག་གི་མཛད་ཤུལ། ===
+==== སྤུ་ན་ཁར་ཟབ་གོས་ཀྱི་མཐོང་གྲོལ། ====
+<big>ལྷོ་འབྲུག་ཆོས་འབྱུང་དང་འབྲུག་གསལ་སྒྲོན་ དེབ་ཐེར་གསལ་བའི་མེ་ལོང་ཚུ་ནང་ འབྲུག་སྡེ་སྲིད་ཆོས་ཀྱི་རྒྱལ་མཚན་ སྡེ་པའི་ཁྲི་ཐོག་བྱོན་ཞིནམ་ལས་ སྤུ་ན་ཁ་ལུ་མཐོང་གྲོལ་བཞེངས་ཡོད་མི་འདི་ ཞལ་མཐུན་བཀོད་དེ་ཡོད་རུང་ ལྷ་སྐུ་གང་ཡིན་གྱི་གསལ་ཁ་མི་སྣང་ཟེར་ཡོདཔ་ཨིན་པས།</big>
+==== བཀྲ་ཤིས་ཆོས་རྫོང་ནང་སྤྱན་རས་གཟིགས་ཀྱི་ལྷ་ཁང་། ====
+<big>བཀྲ་ཤིས་ཆོས་རྫོང་གདན་ས་ལུ་ སྒོ་ཆེན་གོང་མའི་ཐོག་ཆ་སེང་སྟེ་ ལྷ་ཁང་གསརཔ་བཞེངས་ས་ལས་ཕར་ སྤྱན་རས་གཟིགས་ འཕགས་པ་འཇིག་རྟེན་དབང་ཕྱུག་གི་སྐུ་རྟེན་ཐོག་ཚད་མ་གསར་བཞེངས་གནང་ནུག།</big>
+==== ཐིམ་ཕུག་དབུ་རྩེའི་གསེར་གྱི་རྒྱ་ཕིབས། ====
+<big>གདན་ས་བཀྲ་ཤིས་ཆོས་རྫོང་དབུ་རྩེ་ཆེན་མོར་གསེར་གྱི་རྒྱ་ཕིབས་སྒྲོན། དེ་ཡང་ སྒོར་ཚད་འདོམ་དྲུག་ཅུ་རེ་གཉིས་ (༦༢) ཅན་མའི་དོན་ལུ་གཟུང་དོས་ཉིས་བརྒྱ་བརྒྱད་ཅུ་བརྒྱ་བརྒྱད་ (༢༨༨) གསེར་ཏོ་ལ་ ༥༨༠༠ དངུལ་ཆུ་ཏོ་ལ་ཉི་ཤུ་རྩ་གསུམ་དང་སུམ་བརྒྱ་ཞེ་བརྒྱད་ (༢༣,༣༤༨) ཀྱི་རྒྱུ་དངོས་ལས་གསར་སྒྲུབ་གནང་སྟེ་ཕུལ་ཡོདཔ་ཨིན་པས།</big>
+==== བདེ་ཆེན་ཕུག་གི་དགེ་བསྙེན་གསེར་ཟངས་ལས་གྲུབ་པ། ====
+<big>ཐིམ་ཕུག་བདེ་ཆེན་ཕུག་ལུ་ཡོད་པའི་ དཔལ་ལྡན་འབྲུག་པའི་བཀའ་སྲུང་གཙོ་བོ དགེ་བསྙེན་ཇག་མེ་ལེན་གྱི་གནས་ཁང་རབ་གསལ་ གསེར་ཟངས་ཡུག་གཅིག་གིས་སྤུར་ཏེ་ཕུལ་ནུག།</big>
+==== ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པའི་ཞབས་ཏོག། ====
+<big>གསང་སྔགས་ཆོས་གླིང་ལུ་ཡོད་མི་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་གསུམ་པ་འཇིགས་མེད་གྲགས་པའི་གདན་ས་ནང་ལུ་ཡོད་པའི་ སྒྲུབ་སྡེ་ གསར་བཞེངས་དང་ ཤག་སྐོར་གཟིམ་ཅུང་གསར་བཞེངས་ཚུ་གི་སྐབས་ལུ་ ཞབས་ཏོག་ཞུ་གནང་ནུག།</big>
+==== མཁན་ཁྲི་ཉེར་གསུམ་པ་དང་ཉེར་བཞི་པའི་ཁྲི་མངའ་གསོལ། ====
+<big>དེ་ཡང་ མཁན་ཆེན་ཁྲི་རབས་ཉེར་གཉིས་པ་འཇིགས་མེད་རྒྱལ་མཚན་ མཁན་པོའི་ཁྲི་ཐོག་ལས་དགོངས་པ་རྫོགས་སོངམ་ལས་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་ཉི་ཤུ་རྩ་དྲུག་ (༡༨༢༦) མེ་ཁྱི་ལོ་ལུ་ མཁན་ཆེན་ཁྲི་རབས་ཉེར་གཅིག་པ་ འཇམ་དཔལ་གྲགས་པ་མཆོག་ལུ་ མི་སེར་དང་འབྲུག་སྡེ་སྲིད་མཆོག་གིས་ ལོག་སྟེ་ར་ མཁན་ཆེན་ཁྲི་རབས་ ཉེར་གསུམ་པའི་ཁྲི་ཐོག་ལུ་མངའ་གསོལ་ཞུ་ཡོདཔ་ཨིན་པས།<br>
+དེ་བཟུམ་སྦེ་ མཁན་ཆེན་ཁྲི་རབས་ཉེར་གསུམ་པ་ འཇམ་དཔལ་གྲགས་པ་ནི་ མཁན་ཁྲི་ལས་དགོངས་ཞུ་མཛད་དེ་ དགོན་པར་བྱོན་སོངམ་ལས་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སུམ་ཅུ་སོ་གཅིག་ (༡༨༣༡) ལྕགས་ཡོས་ལོ་ལུ་ མི་སེར་དང་འབྲུག་སྡེ་སྲིད་མཆོག་གིས སེ་ལ་ཆོས་རྗེ་ངག་དབང་ཕྲིན་ལས་ཀྱི་ཡང་སྲིས་གཉིས་པ་ ཆོས་རྗེ་ཤཱཀྱ་རྒྱལ་མཚན་མཆོག་ མཁན་ཆེན་ཁྲི་རབས་ཉེར་བཞི་པའི་ཁྲི་ལུ་ མངའ་གསོལ་ཞུ་གནང་ནུག།</big>
+==== བྱམས་མགོན་ཡི་ཤེས་རྡོ་རྗེའི་དགོངས་རྗོགས། ====
+<big>སེ་ལ་བྱམས་མགོན་སྐུ་འཕྲེང་གཉིས་པ་ཡེ་ཤེས་རྡོ་རྗེ་མཆོག་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སུམ་ཅུ་ (༡༨༣༠) ལྕགས་ཡོས་སྟག་ལོ་ལུ་དགོངས་པ་རྫོགས་ཡོདཔ་ད་ འབྲུག་སྡེ་སྲིད་མཆོག་གིས་ ཐིམ་ཕུག་བཀྲ་ཤིས་ཆོས་རྫོང་ལུ་ སྐུ་གདུང་ཞུ་སྟེ་ སྤུར་སྦྱང་དང་དགོངས་རྫོགས་ཀྱི་ཚོགས་དབུ་ལུ་ འཇིགས་མེད་གྲགས་པ་གདན་འདྲེན་ཞུ་སྟེ་ མཛད་གནང་ཡོདཔ་ཨིན་པས།</big>
+==== སྡེ་སྲིད་ཁྲི་ཐོག་གི་མཛད་པ་མཐའ་མ། ====
+<big>དེ་ཡང་ འབྲུག་སྡེ་སྲིད་མཆོག་ནི་ མངའ་འབངས་ཡོངས་ལུ་གནང་སྦྱིན་ལ་སོགས་ བསོད་ནམས་དགེ་བའི་མཛད་པ་རྒྱ་ཆེན་པོ་མཛད་ རྒྱལ་སྲིད་བདེ་སྐྱིད་ཀྱི་ངང་ལུ་སྐྱོང་སྟེ་བཞུགས་པའི་སྐབས་ ཀྲོང་གསར་དཔོན་སློབ་རྡོ་རྗེ་རྣམ་རྒྱལ་གྱི་སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་ ཐབས་ཆག་པའི་སྒོ་ལས་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སུམ་ཅུ་ (༡༨༣༠) ལྕགས་སྟག་ལོ་ལུ་ ངོ་རྒོལ་འབདཝ་བཞིན་ དམག་དཔུང་ལོག་ཅི་ར་གཏང་རུང་ མི་དབང་སྡེ་སྲིད་མཆོག་ལས་ རྒྱལ་ཁ་མ་ཐོབ་པར་ ལྷ་ས་ལུ་ཡོད་མི་རྒྱ་ནག་ཨམ་བྷན་ལས་གྲོགས་རམ་ལེན་ཏེ་ བོད་ཀྱི་དམག་བཏོནམ་ལས་ སྡེ་སྲིད་མཆོག་གི་ རྒྱལ་ཁབ་དང་མི་སེར་ཚུ་ལུ་ཉེན་ཁ་གཟིགས་ཏེ་ སྤུ་ན་ཁ་ལུ་སྦེ་ འབྲུག་སྡེ་སྲིད་མཆོག་གི་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སོ་གཅིག (༡༨༣༡) ལྕགས་ཡོས་ ཟླ་ ༡༡ པའི་ནང་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་དེ་ དབང་འདུས་རྩེ་ལུ་ ཟུར་བཞུགས་མཛད་གནང་ནུག།</big>
+==== སྡེ་ཁྲི་ལས་དགོངས་ཞུའི་རྗེས་ཀྱི་མཛད་པ། ====
+<big>སྡེ་སྲིད་ཁྲི་པ་རྡོ་རྗེ་རྣམ་རྒྱལ་གྱིས་ འབྲུག་སྡེ་སྲིད་ཕུར་རྒྱལ་ལམ་ཆོས་ཀྱི་རྒྱལ་མཚན་སྡེ་ཁྲི་ལས་དགོངས་ཞུས་མཛད་པའི་ཤུལ་ལས་ཡང་ འཁྲུག་ཟིང་སློང་སྟེ་བཞུགས་མ་སྟེརཝ་ལས་ སྡེ་ཟུར་ཆོས་ཀྱི་རྒྱལ་མཚན་སྤ་གྲོ་ལུ་བྱོན་ཏེ་ དཔོན་སློབ་ཨ་རྒས་ཧཱ་པ་དང་མཐུན་འབྲེལ་གྱི་ཐོག་ལུ་བཞུགས་ཏེ་སྡོད་ཡོདཔ་ཨིན་རུང་ མི་སེར་ཚུ་དགའ་སྐྱིད་དང་ལྡནམ་ཡོད་མི་ཚུ་ཡང་ སྡེ་སྲིད་ཁྲི་པ་རྡོ་རྗེ་རྣམ་རྒྱལ་གྱིས་སྤ་རོ་ལུ་དམག་དྲངས་ཏེ་ མི་སེར་དགའ་སྐྱིད་མེདཔ་བཟོཝ་ད་ མི་དྲག་གཙོ་ཅན་མནོ་ཤེས་ཚུ་གིས་གསོལ་བཏབ་ཞུཝ་བཞིན་ སྡེ་ཟུར་ཆོས་ཀྱི་རྒྱལ་མཚན་དབང་འདུས་རྩེ་ལུ་བཞུགས་ཆོགཔ་སྦེ་ རྗེ་མཁན་ཁྲི་པ་ཤེས་རབ་རྒྱལ་མཚན་ ཁྲི་ཟུར་ཤཱཀྱ་རྒྱལ་མཚན་ སྡེ་ཟུར་བསྟན་འཛིན་འབྲུག་སྒྲ་ཚུ་གིས་ཁྲི་བཟོ་གནང་ནུག།<br>
+སྡེ་སྲིད་ཁྲི་རབས་སོ་ལྔ་པ་ཨ་ཐངཔ་ཕྲིན་ལས་ནི་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སུམ་ཅུ་སོ་ལྔ་ (༡༨༣༥) ལུ་སྐུ་བསྙུངས་ཏེ་ སྡེ་སྲིད་ཁྲི་ཐོག་ལུ་གཤགས་སོངམ་ལས་ སྡེ་སྲིད་ཁྲི་ཟུར་ཆོས་ཀྱི་རྒྱལ་མཚན་མཆོག་ནི་ ལོག་སྟེ་ར་ སྡེ་སྲིད་ཁྲི་རབས་སོ་དྲུག་པའི་ ཁྲི་ཐོག་ལུ་བྱོན་ནུག།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
