/* སྡེ་ཁྲི་ལས་དགོངས་ཞུའི་རྗེས་ཀྱི་མཛད་པ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -531,6 +531,23 @@
 <big>སྡེ་སྲིད་ཁྲི་པ་རྡོ་རྗེ་རྣམ་རྒྱལ་གྱིས་ འབྲུག་སྡེ་སྲིད་ཕུར་རྒྱལ་ལམ་ཆོས་ཀྱི་རྒྱལ་མཚན་སྡེ་ཁྲི་ལས་དགོངས་ཞུས་མཛད་པའི་ཤུལ་ལས་ཡང་ འཁྲུག་ཟིང་སློང་སྟེ་བཞུགས་མ་སྟེརཝ་ལས་ སྡེ་ཟུར་ཆོས་ཀྱི་རྒྱལ་མཚན་སྤ་གྲོ་ལུ་བྱོན་ཏེ་ དཔོན་སློབ་ཨ་རྒས་ཧཱ་པ་དང་མཐུན་འབྲེལ་གྱི་ཐོག་ལུ་བཞུགས་ཏེ་སྡོད་ཡོདཔ་ཨིན་རུང་ མི་སེར་ཚུ་དགའ་སྐྱིད་དང་ལྡནམ་ཡོད་མི་ཚུ་ཡང་ སྡེ་སྲིད་ཁྲི་པ་རྡོ་རྗེ་རྣམ་རྒྱལ་གྱིས་སྤ་རོ་ལུ་དམག་དྲངས་ཏེ་ མི་སེར་དགའ་སྐྱིད་མེདཔ་བཟོཝ་ད་ མི་དྲག་གཙོ་ཅན་མནོ་ཤེས་ཚུ་གིས་གསོལ་བཏབ་ཞུཝ་བཞིན་ སྡེ་ཟུར་ཆོས་ཀྱི་རྒྱལ་མཚན་དབང་འདུས་རྩེ་ལུ་བཞུགས་ཆོགཔ་སྦེ་ རྗེ་མཁན་ཁྲི་པ་ཤེས་རབ་རྒྱལ་མཚན་ ཁྲི་ཟུར་ཤཱཀྱ་རྒྱལ་མཚན་ སྡེ་ཟུར་བསྟན་འཛིན་འབྲུག་སྒྲ་ཚུ་གིས་ཁྲི་བཟོ་གནང་ནུག།<br>
 སྡེ་སྲིད་ཁྲི་རབས་སོ་ལྔ་པ་ཨ་ཐངཔ་ཕྲིན་ལས་ནི་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སུམ་ཅུ་སོ་ལྔ་ (༡༨༣༥) ལུ་སྐུ་བསྙུངས་ཏེ་ སྡེ་སྲིད་ཁྲི་ཐོག་ལུ་གཤགས་སོངམ་ལས་ སྡེ་སྲིད་ཁྲི་ཟུར་ཆོས་ཀྱི་རྒྱལ་མཚན་མཆོག་ནི་ ལོག་སྟེ་ར་ སྡེ་སྲིད་ཁྲི་རབས་སོ་དྲུག་པའི་ ཁྲི་ཐོག་ལུ་བྱོན་ནུག།</big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་སོ་བཞི་པ་ཀྲོང་གསར་དཔོན་སློབ་རྡོ་རྗེ་རྣམ་རྒྱལ་གྱི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་མ་མཛད་པའི་མཛད་རྣམ། ====
+<big>སྤྱི་ལོ་ཆིག་སྟོང་བདུན་བརྒྱ་བདུན་ཅུ་དོན་དགུ་ (༡༧༧༩) ས་ཕག་ལོ་ལུ་ མི་དབང་སྡེ་སྲིད་རྡོ་རྗེ་རྣམ་རྒྱལ་མཆོག་ ཝང་ཚོ་ཆེན་བརྒྱད་ཀྱི་ཡ་གྱལ་སྟོད་ཝང་དར་ལུང་ཁ་ལུ་སྐུ་འཁྲུངས་ཏེ་ མཚན་ཡང་རྡོ་རྗེ་རྣམ་རྒྱལ་ཟེར་གསོལ་ཡོདཔ་ཨིན་མས། ཁོ་ར་ནི་ མི་དབང་སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་ཀྱི་ཚ་བོ་འབདཝ་ལས་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ སྡེ་སྲིད་ཀྱི་སྒར་ལྟོ་འབད་དེ་ རྫོང་གོང་མའི་སྒྲིག་ལུ་ཞུགས་ཏེ་ ཆོས་སྲིད་ལུགས་གཉིས་ཀྱི་སྒྲིག་ལམ་རྣམ་གཞག་ལུ་སྦྱང་བ་མཐར་འཁྱོལ་ཡོདཔ་མ་ཚད་ ཁོ་རའི་ལྕོགས་གྲུབ་དང་ སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱས་ཀྱི་རྒྱབ་སྐྱོར་ལས ཆིབས་གཞོན་པའི་འགན་ཁུར་ལས་རིམ་བཟུང་སྟེ་ ཆོས་རྩེ་དཔོན་སློབ་ཀྱི་གོ་གནས་ཚུ་ རིམ་པར་བཞེས་གནང་ནུག།</big>
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བསྐོ་བཞག་གི་མཛད་སྒོ། ====
+<big>སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སུམ་ཅུ་ལུ་ སྐུ་གཞོགས་ཕུར་རྒྱལ་ལམ་ཆོས་ཀྱི་རྒྱལ་མཚན་ སྡེ་སྲིད་ཀྱི་ཁྲི་སྐྱོང་སྟེ་བཞུགས་པའི་སྐབས་ གཞུང་ལུ་ངོ་རྒོལ་གྱི་དམག་དྲངས་ཏེ་ སྡེ་སྲིད་ཀྱི་ཁྲི་འཕྱོག་ནིའི་རྩིས་ཡང་བསྐྱར་འབད་རུང་ གཞུང་དམག་ལུ་མ་ཐུབ་པའི་སྐབས་ ལྷ་ས་ལུ་ཡོད་མི་ཨམ་བྷན་ལུ་དམག་རྒྱབ་འཚོལ་ཏེ་ རྒྱ་མི་ཨམ་བྷན་གྱིས་ ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་གྲོགས་རམ་ལུ་ རྒྱ་མིའི་དམག་དཔུང་དུམ་ཚན་ཅིག་བཏང་མི་ཚུ་གི་རྒྱབ་སྐྱོར་འོག་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་གསུམ་བཅུ་སོ་གཅིག་ (༡༨༣༡) པའི་ལྕགས་ཡོས་ཟླ་ ༡༡ པའི་ནང་ གཞུང་དམག་ལས་རྒྱལ་ཁ་ཐོབ་སྟེ་ གསོལ་ཐབ་སྤུ་ན་ཁར་བཞུགས་པའི་སྐབས་ སྡེ་སྲིད་ཁྲི་རབས་སོ་བཞི་པའི་ཁྲི་ཁར་མངའ་གསོལ་ཞུ་ནུག།</big>
+==== སྡེ་སྲིད་མཆོག་ཁྲི་ཐོག་གི་མཛད་ཤུལ། ====
+===== དང་པ་སྤུང་རྫོང་མེ་མཆོད་ཐེངས་བཞི་པ་གསར་བཞེངས་དགོ་པའི་སྐོར། =====
+<big>འབྲུག་སྡེ་སྲིད་མཆོག་ནི་ སྡེ་སྲིད་ཁྲི་རབས་སོ་བཞི་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞིནམ་ལས་ རྒྱ་མིའི་དཔུང་དམག་ཚུ་ བོད་ལུ་ལོག་སོང་བའི་རྒྱབ་ལས་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་གསུམ་བཅུ་སོ་གཅིག་ (༡༨༣༡) པའི་ ལྕགས་ཡོས་ཟླ་གསུམ་པའི་ཚེས་བཅུ་གསུམ་ལུ་ ལོག་སྟེ་ར་ནང་འཁྲུག་ལོང་བའི་རྐྱེན་གྱིས་ སྤུངས་རྫོང་མེ་མཆོད་ཐེངས་བཞི་པ་བཞེས་མི་འདི་ གསར་བཞེངས་ཐུགས་འགན་བཞེས་དགོཔ་བྱུང་ནུག།
+</big>===== གཉིས་པ་མཁན་ཆེན་ཁྲི་རབས་ཉེར་བཞི་པའི་མངའ་གསོལ། ===== 
+<big>མཁན་ཆེན་ཁྲི་རབས་ཉེར་གསུམ་པ་ འཇམ་དཔལ་གྲགས་པ་མཆོག་ནི་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སོ་གཅིག་ ༡༨༣༡ ལྕགས་ཡོས་ལོར་ དགོངས་ཞུ་མཛད་དེ་དགོན་པར་བྱོནམ་ལས་ མི་དབང་སྡེ་སྲིད་མཆོག་དང་ གྲྭ་ཚང་བླ་སློབ་ཞལ་མཐུན་ཐོག་ལས་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སོ་གཅིག་ ༡༨༣༡ ལྕགས་ཡོས་ལོར་ སེ་ལ་ཆོས་རྗེ་སྐུ་འཕྲེང་གཉིས་པ་ཤཱཀྱ་རྒྱལ་མཚན་མཆོག་ནི་ མཁན་ཆེན་ཁྲི་རབས་ཉེར་བཞི་པའི་ ཆོས་ཀྱི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ནུག།</big>
+===== གསུམ་པ་ནང་འཁྲུག་གི་མཐུན་འགྲིག། =====
+<big>སྡེ་སྲིད་རྡོ་རྗེ་རྣམ་རྒྱལ་གྱིས་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་གསུམ་བཅུ་སོ་གཅིག་ ༡༨༣༡ པའི་ ལྕགས་ཡོས་ལོའི་གསོལ་ཐབ་ཐིམ་ཕུག་ལུ་བཞུགསཔ་ད་ སྡེ་ཟུར་ཆོས་ཀྱི་རྒྱལ་མཚན་གུར་ ཟིང་འཁྲུག་སློང་སྟེ་དམག་དྲངམ་ལས་ སྡེ་ཟུར་སྤ་གྲོ་ལུ་བྲོས་ཟུར་བྱོན་ཏེ་ དཔོན་སློབ་ཨ་རྒས་ཧཱ་པ་དང་ ཧེ་མ་ལས་འཆམ་ཏོག་ཏོ་ཡོདཔ་ལས་ གྲོགས་རམ་འཚོལ་ཏེ་ བཞུགས་ཡོདཔ་ཨིན་མས།<br>
+སྤ་རོ་ལུ་ སྡེ་སྲིད་རྡོ་རྗེ་རྣམ་རྒྱལ་གྱིས་གཞུང་དམག་འཁྱིད་དེ་ དམག་རྐྱབ་པར་བྱོནམ་ད་ སྡེ་ཟུར་ཆོས་ཀྱི་རྒྱལ་མཚན་དང་སྤ་གྲོ་དཔོན་སློབ་ཁ་གཅིག་འབད་དེ་ གཞུང་དམག་དང་གཅིག་ཁར་ཕྱད་མདའ་འགོ་བཙུགས་ཏེ་ ཡུན་རིང་སོངམ་ལས་བརྟེན་ མི་སེར་གྱི་སྐྱིད་སྡུག་ལུ་མ་བཟོད་པར་ དོལ་པོ་གྱང་སའི་མི་དྲག་དོན་གྲུབ་ཀྱི་གཙོ་ཅན་ཚུ་གིས་ དགེ་འདུན་ལུ་མཐུན་སྒྲིག་དགོ་པའི་ཞུ་བ་ཕུལཝ་ད་ མཁན་ཟུར་འཇམ་དཔལ་གྲགས་པ་དང་ མཁན་ཁྲི་ཤཱཀྱ་རྒྱལ་མཚན་གསང་ཟབ་ལས་ སྡེ་ཟུར་བསྟན་འཛིན་འབྲུག་སྒྲ་ཚུ་གིས་བར་མི་མཛད་དེ་ བདེ་སྒྲིག་འབད་གནངམ་ལས་ སྡེ་ཟུར་ཆོས་ཀྱི་རྒྱལ་མཚན་ཡང་ དབང་འདུས་རྩེ་ལུ་བཞུགས་ཆོགཔ་སྦེ་བཟོ་ནུག།</big>
+===== བཞི་པ་སྡེ་སྲིད་མཆོག་ཁྲི་ཐོག་གི་མཛད་ཤུལ། =====
+<big>སྤ་རོ་ལུ་དམག་ཐག་ཆོད་ཞིནམ་ལས་ ལོ་ངོ་ཕྱེད་དང་གཉིས་ཀྱི་ནང་འཁོད་ལུ་ གདན་ས་སྤུ་ན་ཁའི་རྫོང་ཆེན་བསྐྱར་བཞེངས་གནང་ནི་ལུ་ཤུགས་བཏོན་ཏེ་ སྤུ་ན་ཁའི་རྫོང་ནི་ལོག་ཨ་རྟག་ཧ་ལུགས་བཞེངས་ཏེ་ ནང་རྟེན་ནི་སངས་རྒྱས་སྟོང་གི་སྐུ་བརྙན་བཞེངས་ཡོདཔ་ད་ སྡེ་སྲིད་མཆོག་ནི་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སུམ་བཅུ་སོ་གསུམ་ ༡༨༣༣ ཆུ་སྦྲུལ་ལོའི་གསོལ་ཐབ་སྤུ་ན་ཁར་བཞུགསཔ་ད་ ཧེ་མ་གི་ནང་འཁྲུགས་ནད་རོ་ལོང་བའི་ནང་འཁྲུགས་སྐབས་ བྱང་ཕྱད་ཚུ་གིས་སྡེ་སྲིད་མཆོག་གི་སྐུ་ལུ་མཚོན་ཆ་ཕུལ་ཏེ་གཤགས་ནི་གུར་ཐུག་ཆིཔ་ལས་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལས་ཕབ་བཏང་ད་ནུག།
+</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
