/* བཞི་པ་སྡེ་སྲིད་མཆོག་ཁྲི་ཐོག་གི་མཛད་ཤུལ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -548,6 +548,23 @@
 <big>སྤ་རོ་ལུ་དམག་ཐག་ཆོད་ཞིནམ་ལས་ ལོ་ངོ་ཕྱེད་དང་གཉིས་ཀྱི་ནང་འཁོད་ལུ་ གདན་ས་སྤུ་ན་ཁའི་རྫོང་ཆེན་བསྐྱར་བཞེངས་གནང་ནི་ལུ་ཤུགས་བཏོན་ཏེ་ སྤུ་ན་ཁའི་རྫོང་ནི་ལོག་ཨ་རྟག་ཧ་ལུགས་བཞེངས་ཏེ་ ནང་རྟེན་ནི་སངས་རྒྱས་སྟོང་གི་སྐུ་བརྙན་བཞེངས་ཡོདཔ་ད་ སྡེ་སྲིད་མཆོག་ནི་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སུམ་བཅུ་སོ་གསུམ་ ༡༨༣༣ ཆུ་སྦྲུལ་ལོའི་གསོལ་ཐབ་སྤུ་ན་ཁར་བཞུགསཔ་ད་ ཧེ་མ་གི་ནང་འཁྲུགས་ནད་རོ་ལོང་བའི་ནང་འཁྲུགས་སྐབས་ བྱང་ཕྱད་ཚུ་གིས་སྡེ་སྲིད་མཆོག་གི་སྐུ་ལུ་མཚོན་ཆ་ཕུལ་ཏེ་གཤགས་ནི་གུར་ཐུག་ཆིཔ་ལས་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལས་ཕབ་བཏང་ད་ནུག།
 </big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་སོ་ལྔ་པ་ ཨ་ཐང་ཕྲིན་ལས་ཀྱི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་ཨ་ཐང་ཕྲིན་ལས་ཀྱི་འདས་པའི་ལོ་རྒྱུས། ====
+<big>སྡེ་སྲིད་ཁྲི་རབས་སོ་ལྔ་པ་ཨ་ཐང་ཕྲིན་ལས་ནི་ དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག་ཆ་འོག་ཤར་དར་བརྒྱད་པོའི་ཡ་གྱལ་ཨ་ཐང་ལས་སྐུ་འཁྲུངས་ནི་དེ་གི་ མཚན་ཡང་ཕྲིན་ལས་ཟེར་བཞག་ཡོདཔ་ཨིན་པས། སྡེ་སྲིད་ཁྲི་རབས་སོ་ལྔ་པའི་མཚན་ ཨ་ཐང་ཕྲིན་ལས་ཟེར་དར་ཁྱབ་སོང་དགོ་པའི་ གནད་དོན་གཙོ་བོ་ར་ ཁོ་ར་སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ སྡེ་སྲིད་བསོད་ནམས་འབྲུག་རྒྱལ་གྱི་སྒར་ལྟོ་མཛད་དེ་ རྫོང་གོང་མའི་སྒྲིག་ལུ་ཞུགསཔ་ལས་ མཚན་ཡང་འཁྲུངས་ཡུལ་གྱི་མིང་དང་སྦྲགས་ཏེ་ཨ་ཐངཔ་ཕྲིན་ལས་ཟེར་བཤདཔ་ཨིན་པས།</big>
+==== སྡེ་སྲིད་ཁྲི་རབས་སོ་ལྔ་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་བའི་མཛད་པ། ====
+<big>སྡེ་སྲིད་ཁྲི་པ་རྡོ་རྗེ་རྣམ་རྒྱལ་གྱི་ཕྱོགས་སྡེ་དང་ སྡེ་སྲིད་ཁྲི་ཟུར་ཆོས་ཀྱི་རྒྱལ་མཚན་ཕྱོགས་སྡེ་གཉིས་ཀྱི་བར་ན་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སུམ་ཅུ་སོ་གསུམ་ (༡༨༣༣) ཆུ་སྦྲུལ་ལོའི་གསོལ་ཐབ་སྤུ་ན་ཁར་བཞུགསཔ་ད་ ལོག་སྟེ་ར་ཟིང་འཁྲུག་ལོངམ་ལས་ སྡེ་སྲིད་ཁྲི་པའི་སྐུ་ལུ་བྱང་ཕྱད་ཀྱི་མཚོན་ཆ་ཉེན་འཚུབས་ཆེ་ཏོག་ཏོ་སྦེ་ཕོག་སྟེ་ སྐུ་མ་ཉམས་པར་གནས་བཞུགས་ནིའི་རེ་བ་མེདཔ་སྦེ་འགྱོཝ་ལས་ ཆིག་སྟོང་བརྒྱད་བརྒྱ་སུམ་ཅུ་སོ་གསུམ་ (༡༨༣༣) ཆུ་སྦྲུལ་ཟླ་ ༡༡ པའི་ཚེས་ ༡༣ ལས་ སྡེ་སྲིད་ཁྲི་རབས་སོ་ལྔ་པའི་ཁྲི་ལུ་ གོང་གཟིམ་ཨ་ཐངཔ་ཕྲིན་ལས་ནི་གཞུང་དགེ་འདུན་འདུས་པའི་སྡེ་དང་ གཞུང་ལྷན་རྒྱས་ཀྱིས་ མངའ་གསོལ་ཞུ་གནང་ནུག།</big>
+==== སྡེ་སྲིད་ཁྲི་ཐོག་གི་མཛད་ཤུལ། ====
+===== དགེ་འདུན་འདུས་སྡེའི་ཉམས་གསོ། =====
+<big>བསྐལ་པ་དེའི་སྐབས་ གཞུང་དགེ་འདུན་གྲྭ་ཚང་གི་ འགོ་འདྲེན་འཐབ་སྟེ་ དགེ་སློང་གསར་མ་བཙུགས་པར་ ཡུན་རིང་སོང་བ་ལས་ གྲྭ་ཚང་གི་རིགས་ཚན་ལ་ཁྱད་དུ་སོང་བ་ མི་དབང་སྡེ་སྲིད་ཨ་ཐང་ཕྲིན་ལས་མཆོག་གིས་ མཁན་ཆེན་ཁྲི་རབས་ཉེར་བཞི་པ་ ཆོས་རྗེ་ཤཱཀྱ་རྒྱལ་མཚན་ལུ་ཞུ་བ་ཕུལ་ཏེ་ དགེ་སློང་གསརཔ་སུམ་བརྒྱ་ཉི་ཤུ་མཉམ་གཅིག་ལུ་གསར་བཙུགས་མཛད་དེ་གནང་བ་ལས་བརྟེན་ བསྟན་པའི་རྩ་བར་སྨན་པའི་མཛད་ཆེན་ལུ་གྱུར་ཏེ་ དུས་ད་ལྟའི་བར་ སྡེ་སྲིད་སོ་ལྔ་པ་ཨ་ཐང་ཕྲིན་ལས་ཀྱི་ཞལ་གྲངས་ཁལ་བཅུ་དྲུག་པ་ཟེར་བའི་གཏམ་སྙན་ཅན་ལུ་གྱུར་ཡོདཔ་ཨིན་པས།</big>
+===== སངས་རྒྱས་སྟོང་སྐུ་བཞེངས་འཕྲོའི་ལཱ་མཇུག་བསྡུ་ཡོད་པའི་སྐོར། =====
+<big>སྡེ་སྲིད་སོ་བཞི་པ་རྡོ་རྗེ་རྣམ་རྒྱལ་གྱིས་ སྤྱི་ལོ་ཅིག་སྟོང་བརྒྱད་བརྒྱ་སུམ་ཅུ་སོ་ལྔ་ (༡༨༣༥) ཤིང་ལུག་ཟླ་དང་པའི་ཚེས་ ༡༥ ལུ་ སྤུ་ན་ཁ་རྫོང་གི་ནང་རྟེན་སངས་རྒྱས་སྟོང་སྐུ་ བཞེངས་མ་ཚར་བ་ལུས་ཡོད་མི་དེ་ཡང་ མི་དབང་སྡེ་སྲིད་མཆོག་གིས་ལཱ་གཡོག་གི་འགན་ཁུར་འདི་ རྗེ་ཤེས་རབ་རྒྱལ་མཚན་ལུ་བསྐོ་བཞག་གནང་སྟེ་ ཆ་མཉམ་བསྒྲུབས་པའི་རབ་གནས་ནི་ མཁན་པོ་དང་སློབ་དཔོན་དགེ་འདུན་དམངས་ཀྱིས་ཐོག་ལས་མཛད་གནང་ནུག།</big>
+===== ཨ་སམ་ཌུ་ཝར་སི་བྷ་རི་གུ་མ། =====
+<big>སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སུམ་ཅུ་སོ་བཞི་ (༡༨༣༤) ཤིང་རྟའི་ལོ་ལུ་ འབྲུག་གི་དབང་འོག་ལུ་ཡོད་པའི་ཨ་སམ་ཌུ་ཝརསི་བདུན་གྱི་ནང་གསེས་བྷུ་རི་གུ་མ་ཟེར་མི་འདི་ བར་སྐབས་ཅིག་ལས་ འབྲུག་མི་སེར་གྱིས་རྒྱ་གར་གཞུང་ལུ་ ས་ཁྲལ་ཅིག་སྤྲོད་དགོཔ་ཡོད་མི་གི་རྒྱུ་མཚན་ཅིག་ལུ་བརྟེན་ཏེ་ རྒྱ་གར་གཞུང་གིས་མངའ་འོག་སྦེ་ཡོད་མི་འདི་ མི་དབང་སྡེ་སྲིད་མཆོག་གིས་ རྒྱ་གར་གཞུང་ལུ་ ཞུ་ཡིག་ཅིག་ཕུལཝ་ལས་བརྟེན་ ལོག་སྟེ་ར་ འབྲུག་གི་དབང་འོག་ལུ་རང་འཇགས་ཐོབ་ནུག།</big>
+===== ཞབས་དྲུང་ཐུགས་སྤྲུལ་བཞི་པ་འཇིགས་མེད་ནོར་བུ་ བླམ་ཁྲི་པར་མངའ་གསོལ། =====
+<big>སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སུམ་ཅུ་སོ་ཅིག་ (༡༨༣༡) ལྕགས་ཡོས་ལོ་ལུ་ ཤར་ཕྱོགས་དགྲ་མེད་རྩེ་ཟེར་ས་ལུ་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་བཞི་པ་འཇིགས་མེད་ནོར་བུ་ནི་སྐུ་འཁྲུངས་པ་དང་ སྐུ་གོང་མ་འཇིགས་མེད་གྲགས་པའི་ཡང་སྲིད་འཁྲུལ་མེད་དུ་ངོས་ཤེས་འདྲོངསམ་ལས་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སུམ་ཅུ་སོ་བཞི་ (༡༨༣༤) ཤིང་རྟ་ལོའི་ནང་ འབྲུག་སྡེ་སྲིད་ཨ་ཐང་ཕྲིན་ལས་དང་ མཁན་ཆེན་ཆོས་རྗེ་ཤཱཀྱ་རྒྱལ་མཚན་དང་ རྗེ་ཁྲི་ཟུར་འཇམ་དཔལ་གྲྭགས་པ་ གྲྭ་ཚང་ལས་ཁུངས་ལྷན་རྒྱས་ཀྱིས་གཞུང་ལུ་ཞུ་སྟེ་ གསོལ་ཐབ་སྤུ་ན་ཁར་བཞུགསཔ་ད་ མཚན་ཡང་འཇིགས་མེད་ནོར་བུ་ཕྱོགས་ལས་རྣམ་པར་རྒྱལ་བའི་དཔལ་བཟང་པོ་ཟེར་ ཞབས་དྲུང་རིན་པོ་ཆེའི་སེངྒེའི་ཁྲི་ལུ་ བླམ་ཁྲི་པ་བཅུ་གཉིས་པ་ལུ་ མངའ་གསོལ་ཞུ་ནུག།</big>
+===== སྡེ་སྲིད་ཁྲི་ཐོག་གི་ལས་སྣ་མཐའ་མཇུག། =====
+<big>འབྲུག་སྡེ་སྲིད་ཨ་ཐང་ཕྲིན་ལས་ནི་ སྨན་བཅོས་རིམ་གྲོ་གིས་ནད་བཀག་མ་ཚུགས་པའི་ནད་གཞི་བཅོ་ཐབས་མེདཔ་ཅིག་གིས་བསྙུངས་ཏེ་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སུམ་ཅུ་སོ་ལྔ་ (༡༨༣༥) ཤིང་ཕག་ལོའི་གསོལ་ཐབ་ཐིམ་ཕུག་བཞུགས་པའི་རིང་ལུ་ ཡུན་མ་རིང་བར་ ཁྲི་ཐོག་ལུ་གཤགས་ཡོདཔ་ལས་ ཁྲི་ཐོག་ལུ་ལོ་གཉིས་དང་ཕྱེད་དེ་ཅིག་བཞུགས་ཡོདཔ་ཨིན་པས།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
