/* དང་པ་སྡེ་སྲིད་མ་མཛད་པའི་མཛད་རྣམ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -567,7 +567,9 @@
 
 === སྡེ་སྲིད་ཁྲི་རབས་སོ་དྲུག་པ་ ས་སྐྱོང་མི་དབང་སྡེ་སྲིད་ཁྲི་ཟུར་ ཆོས་ཀྱི་རྒྱལ་མཚན་ནམ་ཕུར་རྒྱལ་གྱི་མཛད་རྣམ། ===
 ==== དང་པ་སྡེ་སྲིད་མ་མཛད་པའི་མཛད་རྣམ། ====
-ཧེ་མ་སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་ཉེར་གཉིས་ (༡༨༢༢) ལས་ ཆིག་སྟོང་བརྒྱད་བརྒྱ་སུམ་ཅུ་སོ་གཅིག་ (༡༨༣༡) ཚུན་ལོ་ངོ་བཅུའི་རིང་ མི་དབང་ཆོས་ཀྱི་རྒྱལ་མཚན་གྱི་ཁྲི་རབས་སོ་གསུམ་པ་ ༣༣ མཛད་པའི་མཐའ་མར་ ཀྲོང་གསར་དཔོན་སློབ་རྡོ་རྗེ་རྣམ་རྒྱལ་གྱིས་ངོ་ལོག་དྲག་པོ་སློངམ་ད་ སྡེ་སྲིད་ལས་དགོངས་ཞུ་མཛད་ནུག། དེ་ལས་རྗེ་མཁན་ཁྲི་ཟུར་གཉིས་དང་ སྡེ་ཟུར་བསྟན་འཛིན་འབྲུག་སྒྲ་དང་སྡེ་སྲིད་རྡོ་རྗེ་རྣམ་རྒྱལ་གཉིས་ཀྱིས་ནང་འཁྲུག་སློངམ་ད་ ཆིངས་བསྒྲིགས་ཏེ་ཐུགས་སྣང་དག་པའི་ཐོག་ལས་བཞུགས་གནས་ཡང་ ཐིམ་ཕུག་དབང་འདུས་རྩེ་ལུ་བཞུགས་ཆོགཔ་བཟོ་ནུག།
+<big>ཧེ་མ་སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་ཉེར་གཉིས་ (༡༨༢༢) ལས་ ཆིག་སྟོང་བརྒྱད་བརྒྱ་སུམ་ཅུ་སོ་གཅིག་ (༡༨༣༡) ཚུན་ལོ་ངོ་བཅུའི་རིང་ མི་དབང་ཆོས་ཀྱི་རྒྱལ་མཚན་གྱི་ཁྲི་རབས་སོ་གསུམ་པ་ ༣༣ མཛད་པའི་མཐའ་མར་ ཀྲོང་གསར་དཔོན་སློབ་རྡོ་རྗེ་རྣམ་རྒྱལ་གྱིས་ངོ་ལོག་དྲག་པོ་སློངམ་ད་ སྡེ་སྲིད་ལས་དགོངས་ཞུ་མཛད་ནུག། དེ་ལས་རྗེ་མཁན་ཁྲི་ཟུར་གཉིས་དང་ སྡེ་ཟུར་བསྟན་འཛིན་འབྲུག་སྒྲ་དང་སྡེ་སྲིད་རྡོ་རྗེ་རྣམ་རྒྱལ་གཉིས་ཀྱིས་ནང་འཁྲུག་སློངམ་ད་ ཆིངས་བསྒྲིགས་ཏེ་ཐུགས་སྣང་དག་པའི་ཐོག་ལས་བཞུགས་གནས་ཡང་ ཐིམ་ཕུག་དབང་འདུས་རྩེ་ལུ་བཞུགས་ཆོགཔ་བཟོ་ནུག།
+</big>
+
 ==== གཉིས་པ་སྡེ་སྲིད་ཆོས་ཀྱི་རྒྱལ་མཚན་ཁྲི་ལུ་བསྐོ་བཞག་གི་མཛད་སྒོ། ====
 འབྲུག་སྡེ་སྲིད་ཨ་ཐང་ཕྲིན་ལས་མཆོག་ནི་སྐུ་ལུ་བསྙུང་གཞི་གཅིག་བཞེས་ཏེ་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སོ་ལྔ་ (༡༨༣༥) ཤིང་ལུག་ལོའི་གསོལ་ཐབས་ཐིམ་ཕུག་བཞུགསཔ་ད་ སྡེ་སྲིད་མཆོག་ནི་དགོངས་པ་རྗོགས་སོངམ་ལས་ ཐིམ་ཕུག་དབང་འདུས་རྩེ་ལུ་བཞུགས་ཏེ་ཡོད་མི་སྡེ་སྲིད་ཁྲི་ཟུར་ཆོས་ཀྱི་རྒྱལ་མཚན་འདི་ བླམ་དགེ་འདུན་པ་གཞུང་ལྷན་རྒྱས་རྣམས་ཀྱིས་སྡེ་སྲིད་མཆོག་ཁྲི་རབས་སོ་དྲུག་པའི་ཁྲི་ལུ་ བསྐོ་བཞག་མཛད་གནང་ནུག།
 ==== གསུམ་པ་སྡེ་སྲིད་མཆོག་ཁྲི་ཐོག་གི་མཛད་ཤུལ། ====
