--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -571,7 +571,9 @@
 </big>
 
 ==== གཉིས་པ་སྡེ་སྲིད་ཆོས་ཀྱི་རྒྱལ་མཚན་ཁྲི་ལུ་བསྐོ་བཞག་གི་མཛད་སྒོ། ====
-འབྲུག་སྡེ་སྲིད་ཨ་ཐང་ཕྲིན་ལས་མཆོག་ནི་སྐུ་ལུ་བསྙུང་གཞི་གཅིག་བཞེས་ཏེ་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སོ་ལྔ་ (༡༨༣༥) ཤིང་ལུག་ལོའི་གསོལ་ཐབས་ཐིམ་ཕུག་བཞུགསཔ་ད་ སྡེ་སྲིད་མཆོག་ནི་དགོངས་པ་རྗོགས་སོངམ་ལས་ ཐིམ་ཕུག་དབང་འདུས་རྩེ་ལུ་བཞུགས་ཏེ་ཡོད་མི་སྡེ་སྲིད་ཁྲི་ཟུར་ཆོས་ཀྱི་རྒྱལ་མཚན་འདི་ བླམ་དགེ་འདུན་པ་གཞུང་ལྷན་རྒྱས་རྣམས་ཀྱིས་སྡེ་སྲིད་མཆོག་ཁྲི་རབས་སོ་དྲུག་པའི་ཁྲི་ལུ་ བསྐོ་བཞག་མཛད་གནང་ནུག།
+<big>འབྲུག་སྡེ་སྲིད་ཨ་ཐང་ཕྲིན་ལས་མཆོག་ནི་སྐུ་ལུ་བསྙུང་གཞི་གཅིག་བཞེས་ཏེ་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སོ་ལྔ་ (༡༨༣༥) ཤིང་ལུག་ལོའི་གསོལ་ཐབས་ཐིམ་ཕུག་བཞུགསཔ་ད་ སྡེ་སྲིད་མཆོག་ནི་དགོངས་པ་རྗོགས་སོངམ་ལས་ ཐིམ་ཕུག་དབང་འདུས་རྩེ་ལུ་བཞུགས་ཏེ་ཡོད་མི་སྡེ་སྲིད་ཁྲི་ཟུར་ཆོས་ཀྱི་རྒྱལ་མཚན་འདི་ བླམ་དགེ་འདུན་པ་གཞུང་ལྷན་རྒྱས་རྣམས་ཀྱིས་སྡེ་སྲིད་མཆོག་ཁྲི་རབས་སོ་དྲུག་པའི་ཁྲི་ལུ་ བསྐོ་བཞག་མཛད་གནང་ནུག།
+</big>
+
 ==== གསུམ་པ་སྡེ་སྲིད་མཆོག་ཁྲི་ཐོག་གི་མཛད་ཤུལ། ====
 མཁན་ཆེན་ཁྲི་རབས་ཉེར་ལྔ་པ་མཆོག་སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སོ་དྲུག་ (༡༨༣༦) ཤིང་སྤྲེལ་ལོ་ལུ་ མཁན་ཆེན་ཉེར་བཞི་པ་ ཆོས་རྗེ་ཤཱཀྱ་རྒྱལ་མཚན་མཆོག་དགོངས་པ་རྗོགས་སོངམ་ལས་ སྡེ་སྲིད་མཆོག་དང་ གྲྭ་ཚང་རྣམས་ནས་ རྗེ་ཤེས་རབ་རྒྱལ་མཚན་མཆོག་ མཁན་ཆེན་ཁྲི་རབས་ཉེར་ལྔ་པའི་ཆོས་ཀྱི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ནུག། དེ་ལས་སྡེ་སྲིད་མཆོག་གིས་ ཀེབ་ཀྲིན་བྷོ་གིལ་དང་ ཀེབ་ཀྲིན་དཔལ་འབར་ཊེན་དང་འབྲེལ་བ་འདི་ཡང་ རྒྱ་གར་གཞུང་ཀེབ་ཀྲིན་བྷོ་གིས་འབྲུག་ལུ་ཁ་སླབ་པར་བཏང་མི་འདི་ཡང་ དུས་སྐབས་དེ་ནང་འབྲུག་མི་ཚུ་གིས་རྒྱ་གར་ནའོ་གཞུང་དང་ ད་རང་ག་ས་གནས་གཉིས་ནང་འཕྲོག་བཅོམ་འབདཝ་མ་ཚད་ རྒྱ་གར་གྱི་མི་སེར་ལེ་ཤ་བཟུང་སྟེ་འབྲུག་ནང་བཏངམ་ལས་ཨིན་པས། ཀེབ་ཀྲིན་བྷོ་གིལ་འབྲུག་ལུ་བཏངམ་ད་ དེ་ཝང་གུ་རི་ཡིརྗོང་དཔོན་དང་གཅིག་ཁར་ དམག་འཁྲུག་ལོངས་ཏེ་བཱག་ས་དྲུ་ཨར་དེ་ཡང་ ཕྱི་གླིང་པ་ལུ་ཤོར་སོ་ནུག། དེ་ལས་ཕྱི་གཞུང་ལས་ བཱག་ས་དྲུ་ཨར་ འབྲུག་ལུ་སྤྲོད་དགོ་པའི་བཀའ་ཤོག་གནང་མི་དེ་ཡང་ སྡེ་སྲིད་ཆོས་ཀྱི་རྒྱལ་མཚན་གྱིས་ ལྷོ་མཚམས་མི་སེར་ཚུའི་ཁོངས་ནས་ རྒྱ་གར་མི་སེར་སྟེང་དུ་དབང་བཙོང་དང་ཅ་ཆས་རྣམས་འཕྲོག་བཅོམ་ ས་ཁྲལ་ཆད་ལུས་བཞག་མི་ཚུ་ སྡེ་པ་ལུ་རྒྱུས་ཆ་མེདཔ་ལས་ ས་ཁྲལ་ཆད་ཚུ་དྲུ་ཨརསི་གི་རྗོང་དཔོན་ཚུ་གིས་ དགོཔ་སྦེ་སླབ་ཡོདཔ་ལས་ བག་ས་དྲུ་ཨར་ལོག་སྟེ་ འབྲུག་ལུ་རྩིས་སྤྲོད་དགོཔ་སྦེ་ཡི་གུ་བཏངམ་ལས་ཨིན་པས། ཨིན་རུང་ཕྱི་གཞུང་གྱི་བཀའ་ཤོག་འདི་ ས་མཚམས་ལས་ཐོགས་ཏེ་ སྡེ་སྲིད་མཆོག་གི་ཕྱག་ལུ་མ་འབྱོར་བས། 
 བླ་མ་ཁྲི་པ་ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་དགུང་ལོ་བདུན་བཞེས་མི་དང་ སྡེ་སྲིད་མཆོག་དང་རྗོང་དཔོན་ཚུ་གིས་ ངོས་ལེན་གནང་མི་འདི་ཡང་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སོ་བདུན་ (༡༨༣༧) མེ་བྱ་ལོ་ལུ་ རྒྱ་གར་གཞུང་གིས་ ཨ་སམ་དྲུ་ཨརསི་ཚུ རྒྱ་གར་གཞུང་ཁོངས་སུ་བཞག་སྟེ་ ས་རིན་ལོ་བསྟར་ ༡༠,༠༠༠/- རེ་འབྲུག་ལུ་ཕུལ་རྒྱུའི་ཁ་སླབ་པར་ ཀེབ་ཀྲིན་དཔལ་འབར་ཏེན་ དེ་ཝང་གུ་རི་བརྒྱུད་དེ་ འབྲུག་ནང་བཏངམ་ལས་ཨིན། དེ་ལུ་ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་ངོས་ལེན་མ་འབད་བར་ དོན་དག་མ་གྲུབ་པར་ལུས་ནུག། ད་རུང་སྡེ་སྲིད་མཆོག་ནི་ ཁྲི་ཐོག་མཛད་པའི་མཐའ་མ་ གཞོང་སྒར་རྫོང་དཔོན་ལྕགས་པ་སངས་རྒྱས་ཀྱིས་ གཞུང་ལུ་ངོ་ལོག་གི་དམག་སྤུ་ན་ཁར་ལྷོད་དེ་ ཟླ་དང་པའི་ཚེས་ ༡༥ འི་ནུབ་མོ་ རྗོང་འཕྱོག་ཆིཝ་ལས་ སྡེ་སྲིད་མཆོག་མཁན་ཆེན་གྱི་གཟིམ་ཅུང་ནང་ སྲོག་སྐྱབས་ཞུ་བར་བྱོན་ཏེ་ སྡེ་སྲིད་ཀྱི་ཁྲི་ལས་ ཟུར་བཞུགས་དགོཔ་བྱུང་ནུག། དེ་ཡང་སྤྱི་ལོ་ ༡༨༣༨ ས་ཁྱི་ལོའི་གསོལ་ཐབ་ སྤུ་ན་ཁར་བཞུགསཔ་ཨིན་པས།
